Backport translations from master
Bug: T339225
Change-Id: I362ca5dc9ffc582d9f69ca6aaa9d12c8d3212e71

--- a/i18n/help/ro.json
+++ b/i18n/help/ro.json
@@ -22,10 +22,13 @@
 	"growthexperiments-help-panel-postedit-success-message-saved": "{{GENDER:|Ați}} salvat o editare. Vă mulțumim și continuați!",
 	"growthexperiments-help-panel-postedit-success-message-notsaved": "Vă mulțumim pentru revizuirea sugestiilor. Continuați!",
 	"growthexperiments-help-panel-postedit-success-message-allavailabletasksdone-image-recommendation": "Toate adăugările de imagine la articole pentru astăzi sunt terminate. Felicitări!",
+	"growthexperiments-help-panel-postedit-success-message-allavailabletasksdone-section-image-recommendation": "Toate sugestiile disponibile de imagini la secțiuni de articole pentru astăzi sunt terminate. Felicitări!",
 	"growthexperiments-help-panel-postedit-success-message-allavailabletasksdone-link-recommendation": "Toate sugestiile de legare la articole pentru astăzi sunt terminate. Felicitări!",
 	"growthexperiments-help-panel-postedit-header": "Pașii următori",
 	"growthexperiments-help-panel-postedit-subheader-image-recommendation": "Mai multe feluri de a edita",
 	"growthexperiments-help-panel-postedit-subheader2-image-recommendation": "Încercați alt tip de editare sau reveniți mâine pentru mai multe sugestii de imagine.",
+	"growthexperiments-help-panel-postedit-subheader-section-image-recommendation": "Mai multe feluri de a edita",
+	"growthexperiments-help-panel-postedit-subheader2-section-image-recommendation": "{{GENDER:|Ați}} finalizat toate sugestiile de imagine la nivel de secțiune pentru astăzi. \n{{GENDER:|Ajustați-vă}} nivelurile de dificultate pentru a vedea alte tipuri de editări sau reveniți mâine pentru mai multe sugestii de imagine.",
 	"growthexperiments-help-panel-postedit-subheader-link-recommendation": "Mai multe feluri de a edita",
 	"growthexperiments-help-panel-postedit-subheader2-link-recommendation": "Încercați alt tip de editare sau reveniți mâine pentru mai multe sugestii de legare.",
 	"growthexperiments-help-panel-postedit-subheader": "Editați altă sugestie:",
@@ -140,7 +143,19 @@
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-image-recommendation-main-step2": "Citiți din articol și gândiți-vă dacă imaginea sugerată va ajuta cititorii să înțeleagă conținutul. Este potrivită afișarea sa în articol?",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-image-recommendation-header-step3": "Decideți dacă imaginea aparține",
 	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-image-recommendation-main-multiple-1-step3": "Sugestia ar putea să nu aibă legătură cu articolul, să aibă calitate joasă sau să nu aparțină din alte motive. {{GENDER:|Utilizați-vă}} judecata pentru a decide dacă sugestia este corectă sau greșită.",
-	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-image-recommendation-main-multiple-2-step3": "Pentru imaginile pe care le {{GENDER:|acceptați}}, {{GENDER:|veți}} scrie o descriere scurtă, iar apoi editarea {{GENDER:|dvs.}} va fi publicată.",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-image-recommendation-main-multiple-2-step3": "După ce {{GENDER:|acceptați}} o imagine, {{GENDER:|veți}} scrie o descriere scurtă, iar după aceea vă {{GENDER:|veți}} putea publica {{GENDER:|modificarea}}.",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-section-image-recommendation-header-value": "Imaginile ajută oamenii să învețe, dar multe articole nu au una.",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-section-image-recommendation-main-multiple-1-value": "{{GENDER:|Dvs.}} veți decide dacă o imagine sugerată ar trebui pusă într-o anumită secțiune a unui articol Wikipedia.",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-section-image-recommendation-main-multiple-2-value": "Sugestiile sunt generate automat, iar {{GENDER:|dvs.}} {{GENDER:|vă}} veți utiliza judecata pentru a o accepta sau respinge.",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-section-image-recommendation-text-value": "Imaginile provin de la Wikimedia Commons, o colecție de imagini cu licență liberă utilizate de Wikipedia.",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-section-image-recommendation-header-step1": "Uitați-vă la imaginea sugerată",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-section-image-recommendation-main-multiple-1-step1": "Utilizați numele fișierului, descrierea și motivul pentru care a fost sugerată pentru a vă ajuta să decideți dacă ar {{GENDER:|trebui}} plasată în articol.",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-section-image-recommendation-main-multiple-2-step1": "{{GENDER:|Puteți}} de asemenea să măriți imaginea pentru a o vedea mai clar.",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-section-image-recommendation-header-step2": "Uitați-vă atât la articol, cât și la secțiunea acestuia",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-section-image-recommendation-main-step2": "Citiți din articol și secțiunea acestuia și gândiți-vă dacă imaginea sugerată va ajuta cititorii să înțeleagă conținutul. Este potrivită afișarea sa în secțiune?",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-section-image-recommendation-header-step3": "Decideți dacă imaginea aparține",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-section-image-recommendation-main-multiple-1-step3": "Sugestia ar putea să nu aibă legătură cu secțiunea, să aibă calitate joasă sau să nu aparțină din alte motive. {{GENDER:|Utilizați-vă}} judecata pentru a decide dacă sugestia este corectă sau greșită.",
+	"growthexperiments-help-panel-suggestededits-tips-vector-visualeditor-section-image-recommendation-main-multiple-2-step3": "După ce {{GENDER:|acceptați}} o imagine, {{GENDER:|veți}} scrie o descriere scurtă, iar după aceea vă {{GENDER:|veți}} putea publica {{GENDER:|modificarea}}.",
 	"growthexperiments-help-panel-questioncomplete-title": "Puneți o întrebare",
 	"growthexperiments-help-panel-questioncomplete-header": "Întrebarea dvs. a fost publicată!",
 	"growthexperiments-help-panel-questioncomplete-confirmation-text": "Întrebarea dvs. este acum pe Biroul de ajutor al comunității, pentru a primi răspuns de la alt editor voluntar.",
