--- a/i18n/homepage/ar.json
+++ b/i18n/homepage/ar.json
@@ -1,6 +1,7 @@
 {
 	"@metadata": {
 		"authors": [
+			"Asma",
 			"Dr. Mohammed",
 			"Dyolf77",
 			"Dyolf77 (WMF)",
@@ -153,6 +154,8 @@
 	"tag-newcomer_task_add_link-description": "مهمة التعديل «إضافة وصلة» مقترحة من وحدة التعديلات المقترحة من لوحة المستخدم للوافدين الجدد",
 	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|اقتراح: إضافة صور]]",
 	"tag-newcomer_task_image_suggestion-description": "مهمة تعديل «إضافة صور» مقترحة من وحدة التعديلات المقترحة من لوحة المستخدم للوافدين الجدد",
+	"tag-newcomer_task_section_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-section-image|مقترح: إضافة صور إلى الأقسام]]",
+	"tag-newcomer_task_section_image_suggestion-description": "مهمة تعديل «إضافة صور إلى الأقسام» مقترحة من وحدة التعديلات المقترحة من لوحة المستخدم للوافدين الجدد",
 	"growthexperiments-homepage-help-dialog-title": "طرح السؤال على فريق المساعدة",
 	"growthexperiments-homepage-help-header": "{{GENDER:|احصل|احصلي}} على المساعدة في التحرير",
 	"growthexperiments-homepage-help-subheader": "صفحات المساعدة الأكثر قراءة حول التحرير",
@@ -272,7 +275,7 @@
 	"growthexperiments-homepage-suggestededits-difficulty-filters-title": "{{GENDER:|حدّد|حدّدي}} مستوى التعديلات",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-intro": "تم تصميم التعديلات المقترحة {{GENDER:|لمساعدتكَ|لمساعدتكِ}} على تعلّم التعديل وزيادة مهاراتك في أثناء عملك على أنواع أخرى من التعديلات.",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-create-title": "{{GENDER:|تريد|تريدين}} إنشاء مقالة جديدة؟",
-	"growthexperiments-homepage-suggestededits-difficulty-filters-create-body": "يوصيك محررو {{SITENAME}} بتجربة بعض المهام المتوسطة والصعبة أولاً قبل محاولة كتابة مقالة جديدة. [$1 {{GENDER:|تعرف|تعرفي}} على المزيد] حول كتابة مقالة جديدة غير موجودة.",
+	"growthexperiments-homepage-suggestededits-difficulty-filters-create-body": "يوصي محررو {{SITENAME}} بتجربة بعض المهام المتوسطة والصعبة أولاً قبل محاولة كتابة مقالة جديدة. [$1 {{GENDER:|تعرف|تعرفي}} على المزيد] حول كتابة مقالة جديدة.",
 	"growthexperiments-homepage-suggestededits-topic-filters-title": "{{GENDER:|حدّد|حدّدي}} المواضيع",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-close": "تم",
 	"growthexperiments-homepage-suggestededits-topic-filters-close": "تم",
@@ -485,6 +488,8 @@
 	"growthexperiments-addimage-inspector-help-button": "{{GENDER:|احصل|احصلي}} على مساعدة في التحرير",
 	"growthexperiments-addimage-inspector-details-button": "إظهار تفاصيل الصورة",
 	"growthexperiments-addimage-inspector-description-placeholder": "لا يتوفر وصف",
+	"growthexperiments-addsectionimage-inspector-title": "أضف صورة إلى قسم المقال",
+	"growthexperiments-addsectionimage-inspector-cta": "أضف هذه الصورة إلى قسم المقالات \"$1\"؟",
 	"growthexperiments-addimage-detailsdialog-header": "تفاصيل الصورة",
 	"growthexperiments-addimage-detailsdialog-image": "اسم الملف:",
 	"growthexperiments-addimage-detailsdialog-description": "الوصف:",
@@ -505,6 +510,7 @@
 	"growthexperiments-addimage-rejectiondialog-reason-lowquality": "صورة رديئة الجودة",
 	"growthexperiments-addimage-rejectiondialog-reason-unfamiliar": "لا أعرف هذا الموضوع",
 	"growthexperiments-addimage-rejectiondialog-reason-foreignlanguage": "لا يمكنني قراءة اللغة في تفاصيل الصورة",
+	"growthexperiments-addimage-rejectiondialog-reason-sectionnotappropriate": "يجب ألا يحتوي القسم على صورة",
 	"growthexperiments-addimage-rejectiondialog-reason-other": "أخرى",
 	"growthexperiments-addimage-viewer-close-button": "أغلق",
 	"growthexperiments-addimage-onboarding-content-intro-title": "تساعد الصور الأشخاص على التعلّم، لكن تفتقر العديد من المقالات إلى الصور.",
@@ -563,8 +569,15 @@
 	"growthexperiments-addimage-reason-wikipedia-languages": "مستخدمة في نفس المقالة في {{PLURAL:$1||لغة أخرى|لغتين أخرتين|$1 لغات أخرى|$1 لغة أخرى}}: $2.",
 	"growthexperiments-addimage-reason-wikipedia-languages-others": "$1 {{PLURAL:$1||آخر|آخرين|أخر}}",
 	"growthexperiments-addimage-reason-wikipedia-project": "مستخدمة في نفس المقالة من $1.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment": "مستخدَمة في نفس قسم المقالة {{PLURAL:$1|لا لغة|بلغة أخرى|بلغتين أخرتين|بـ$1 لغات أخرى|بـ$1 لغة أخرى}}.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment-languages": "مستخدَمة في نفس المقالة {{PLURAL:$1|لا لغة|بلغة أخرى|بلغتين أخرتين|بـ$1 لغات أخرى|بـ$1 لغة أخرى}}: $2.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment-project": "مستخدَمة في نفس قسم المقالة في $1.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-single": "مستخدَمة في نفس قسم المقالة في $1، وتتعلق بعنصر ويكي بيانات الذي قد يكون متّصلًا بهذا القسم من المقالة.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-multiple": "مستخدَمة في نفس قسم المقالة في $1 و{{PLURAL:$2|لا لغة|بلغة أخرى|بلغتين أخرتين|بـ$2 لغات أخرى|بـ$2 لغة أخرى}}، وتتعلق بعنصر ويكي بيانات الذي قد يكون متّصلًا بهذا القسم من المقالة.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-languages": "مستخدَمة في نفس قسم المقالة {{PLURAL:$1|لا لغة|بلغة أخرى|بلغتين أخرتين|بـ$1 لغات أخرى|بـ$1 لغة أخرى}}، وتتعلق بعنصر ويكي بيانات الذي قد يكون متّصلًا بهذا القسم من المقالة.",
 	"growthexperiments-addimage-reason-wikidata": "وجدت في عنصر ويكي بيانات لهذه المقالة (تطابق قوي).",
 	"growthexperiments-addimage-reason-commons": "واحدة من عدة صور مرتبطة بعنصر ويكي بيانات لهذه المقالة.",
+	"growthexperiments-addimage-reason-wikidata-section-topics": "تتعلق بعنصر ويكي بيانات الذي قد يكون متّصلًا بهذا القسم من المقالة.",
 	"growthexperiments-addimage-daily-task-limit-exceeded": "لقد انتهيت من كلّ اقتراحات الصور لهذا اليوم.\n\n{{GENDER:|عدّل|عدّلي}} من مستوى الصعوبة للحصول على أنواع أخرى من التعديلات أو {{GENDER:|ارجع|ارجعي}} غداً للمزيد من اقتراحات الصّور.",
 	"growthexperiments-addimage-daily-task-limit-exceeded-dialog-button": "عُلم",
 	"growthexperiments-addimage-caption-warning-tooshort": "يجب أن يكون الشرح متكوّنا من {{PLURAL:$1||حرف واحد|حرفين|$1 أحرف|$1 حرفا|$1 حرف}} فأكثر.",
