--- a/i18n/homepage/de.json
+++ b/i18n/homepage/de.json
@@ -166,6 +166,8 @@
 	"tag-newcomer_task_add_link-description": "„Link hinzufügen“-Bearbeitungsaufgabe basierend auf dem „Vorgeschlagene Bearbeitungen“-Modul der Neulings-Startseite",
 	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Vorgeschlagen: Bilder hinzufügen]]",
 	"tag-newcomer_task_image_suggestion-description": "„Bild hinzufügen“-Bearbeitungsaufgabe basierend auf dem Modul für vorgeschlagene Bearbeitungen der Neulings-Startseite",
+	"tag-newcomer_task_section_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-section-image|Vorgeschlagen: Bilder zu Abschnitten hinzufügen]]",
+	"tag-newcomer_task_section_image_suggestion-description": "Aufgabenbearbeitung „Bilder zu Abschnitten hinzufügen“, vorgeschlagen vom Modul „Vorgeschlagene Bearbeitungen“ der Newcomer-Homepage",
 	"growthexperiments-homepage-help-dialog-title": "frage auf der Seite „Fragen von Neulingen“",
 	"growthexperiments-homepage-help-header": "Hilfe bei der Bearbeitung erhalten",
 	"growthexperiments-homepage-help-subheader": "Top-Hilfeseiten zur Bearbeitung",
@@ -280,7 +282,7 @@
 	"growthexperiments-homepage-suggestededits-difficulty-filters-title": "Wähle die Art der Bearbeitungen",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-intro": "Die vorgeschlagenen Änderungen sollen {{GENDER:|dir}} dabei helfen, das Bearbeiten zu lernen und bei größeren Änderungen besser zu werden.",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-create-title": "Möchtest du einen neuen Artikel erstellen?",
-	"growthexperiments-homepage-suggestededits-difficulty-filters-create-body": "{{SITENAME}}-Benutzer empfehlen, dass {{GENDER:|du}} zuerst ein paar mittlere und schwierige Aufgaben ausprobierst, bevor du dich an einem neuen Artikel versuchst. [$1 Weitere Informationen] über das Schreiben eines neuen fehlenden Artikels.",
+	"growthexperiments-homepage-suggestededits-difficulty-filters-create-body": "{{SITENAME}}-Benutzer empfehlen, dass {{GENDER:|du}} zuerst ein paar mittlere und schwierige Aufgaben ausprobierst, bevor du dich an einem neuen Artikel versuchst. [$1 Weitere Informationen] über das Schreiben eines neuen Artikels.",
 	"growthexperiments-homepage-suggestededits-topic-filters-title": "Themen wählen",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-close": "Fertig",
 	"growthexperiments-homepage-suggestededits-topic-filters-close": "Fertig",
@@ -492,6 +494,8 @@
 	"growthexperiments-addimage-inspector-help-button": "Hilfe bei der Bearbeitung erhalten",
 	"growthexperiments-addimage-inspector-details-button": "Bilddetails anzeigen",
 	"growthexperiments-addimage-inspector-description-placeholder": "Keine Beschreibung verfügbar",
+	"growthexperiments-addsectionimage-inspector-title": "Einem Artikelabschnitt ein Bild hinzufügen",
+	"growthexperiments-addsectionimage-inspector-cta": "Dieses Bild zum Artikelabschnitt „$1“ hinzufügen?",
 	"growthexperiments-addimage-detailsdialog-header": "Details zum Bild",
 	"growthexperiments-addimage-detailsdialog-image": "Dateiname:",
 	"growthexperiments-addimage-detailsdialog-description": "Beschreibung:",
@@ -512,6 +516,7 @@
 	"growthexperiments-addimage-rejectiondialog-reason-lowquality": "Bild ist von schlechter Qualität",
 	"growthexperiments-addimage-rejectiondialog-reason-unfamiliar": "Ich kenne mich mit diesem Thema nicht aus.",
 	"growthexperiments-addimage-rejectiondialog-reason-foreignlanguage": "Ich kann die Sprache in der Bildbeschreibung nicht lesen",
+	"growthexperiments-addimage-rejectiondialog-reason-sectionnotappropriate": "Der Abschnitt sollte kein Bild enthalten",
 	"growthexperiments-addimage-rejectiondialog-reason-other": "Andere",
 	"growthexperiments-addimage-viewer-close-button": "Schließen",
 	"growthexperiments-addimage-onboarding-content-intro-title": "Bilder helfen beim Lernen, aber viele Artikel haben keine Bilder.",
@@ -570,8 +575,15 @@
 	"growthexperiments-addimage-reason-wikipedia-languages": "Wird im selben Artikel in $1 {{PLURAL:$1|einer andere Sprache|anderen Sprachen}} verwendet: $2",
 	"growthexperiments-addimage-reason-wikipedia-languages-others": "$1 {{PLURAL:$1|anderer|andere}}",
 	"growthexperiments-addimage-reason-wikipedia-project": "Verwendet im selben Artikel in $1.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment": "Wird in einem entsprechenden Artikelabschnitt in {{PLURAL:$1| einer anderen Sprache|$1 anderen Sprachen}} verwendet.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment-languages": "Wird in einem entsprechenden Artikelabschnitt in {{PLURAL:$1| einer anderen Sprache|$1 anderen Sprachen}} verwendet: $2 .",
+	"growthexperiments-addimage-reason-wikidata-section-alignment-project": "Wird in einem entsprechenden Artikelabschnitt in $1 verwendet.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-single": "Wird in einem entsprechenden Artikelabschnitt in $1 verwendet und bezieht sich auf ein Wikidata-Element, das für diesen Artikelabschnitt relevant sein könnte.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-multiple": "Wird in einem entsprechenden Artikelabschnitt in $1 und {{PLURAL:$2|einer weiteren Sprache|$2 weiteren Sprachen}} verwendet und bezieht sich auf ein Wikidata-Element, das für diesen Artikelabschnitt relevant sein könnte.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-languages": "Wird in einem entsprechenden Artikelabschnitt in {{PLURAL:$1|einer anderen Sprache|$1 anderen Sprachen}} verwendet und bezieht sich auf ein Wikidata-Element, das für diesen Artikelabschnitt relevant sein könnte.",
 	"growthexperiments-addimage-reason-wikidata": "Gefunden in dem Wikidata-Eintrag zu diesem Artikel (starke Übereinstimmung).",
 	"growthexperiments-addimage-reason-commons": "Eines von mehreren Bildern, die mit dem Wikidata-Eintrag zu diesem Artikel verlinkt sind.",
+	"growthexperiments-addimage-reason-wikidata-section-topics": "Verlinkt mit einem Wikidata-Eintrag, der für diesen Artikelabschnitt relevant sein könnte.",
 	"growthexperiments-addimage-daily-task-limit-exceeded": "{{GENDER:|Du}} hast alle Bildvorschläge von heute erledigt.\n\nPasse {{GENDER:|deinen}} Schwierigkeitsgrad an, um andere Arten von Bearbeitungen zu sehen, oder komme morgen für weitere Bildvorschläge wieder.",
 	"growthexperiments-addimage-daily-task-limit-exceeded-dialog-button": "Verstanden",
 	"growthexperiments-addimage-caption-warning-tooshort": "Bildunterschriften müssen $1 {{PLURAL:$1|Zeichen}} oder länger sein.",
