--- a/i18n/homepage/he.json
+++ b/i18n/homepage/he.json
@@ -152,6 +152,8 @@
 	"tag-newcomer_task_add_link-description": "עריכה במסגרת משימת \"הוספת קישור\" שהוצעה על־ידי מודול העריכות המוצעות של דף הבית למתחילים",
 	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|מוצע: הוספת תמונות]]",
 	"tag-newcomer_task_image_suggestion-description": "עריכה במסגרת משימת \"הוספת תמונות\" שהוצעה על־ידי מודול העריכות המוצעות של דף הבית למתחילים",
+	"tag-newcomer_task_section_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-section-image|מוצע: הוספת תמונות לפרקים]]",
+	"tag-newcomer_task_section_image_suggestion-description": "עריכה במסגרת משימת \"הוספת תמונות לפרקים\" שהוצעה על־ידי מודול העריכות המוצעות של דף הבית למתחילים",
 	"growthexperiments-homepage-help-dialog-title": "לשאול בחממה",
 	"growthexperiments-homepage-help-header": "{{GENDER:|קבל|קבלי}} עזרה עם עריכה",
 	"growthexperiments-homepage-help-subheader": "דפי העזרה העיקריים בנושא עריכה",
@@ -266,7 +268,7 @@
 	"growthexperiments-homepage-suggestededits-difficulty-filters-title": "בחר את סוג העריכה",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-intro": "עריכות מוצעות נועדו לעזור לך ללמוד לערוך ולהיות {{GENDER:|מיומן יותר ככל שאתה עובד|מיומנת יותר ככל שאת עובדת}} על סוגים גדולים יותר של עריכות.",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-create-title": "רוצה ליצור ערך חדש?",
-	"growthexperiments-homepage-suggestededits-difficulty-filters-create-body": "עורכי {{SITENAME}} ממליצים {{GENDER:|לך}} לנסות תחילה כמה משימות בינוניות וקשות לפני ניסיון ליצור ערך חדש. [$1 למידע נוסף] על כתיבת ערך חדש שחסר כעת.",
+	"growthexperiments-homepage-suggestededits-difficulty-filters-create-body": "עורכי {{SITENAME}} ממליצים {{GENDER:|לך}} לנסות תחילה כמה משימות בינוניות וקשות לפני ניסיון ליצור ערך חדש. [$1 למידע נוסף] על כתיבת ערך חדש.",
 	"growthexperiments-homepage-suggestededits-topic-filters-title": "{{GENDER:|בחר|בחרי}} נושאים",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-close": "בוצע",
 	"growthexperiments-homepage-suggestededits-topic-filters-close": "בוצע",
@@ -478,6 +480,8 @@
 	"growthexperiments-addimage-inspector-help-button": "קבלת עזרה עם עריכה",
 	"growthexperiments-addimage-inspector-details-button": "הצגת פרטי תמונה",
 	"growthexperiments-addimage-inspector-description-placeholder": "אין תיאור זמין",
+	"growthexperiments-addsectionimage-inspector-title": "הוספת תמונה לפרק של ערך",
+	"growthexperiments-addsectionimage-inspector-cta": "להוסיף את התמונה הזאת לפרק בערך \"$1\"?",
 	"growthexperiments-addimage-detailsdialog-header": "פרטי התמונה",
 	"growthexperiments-addimage-detailsdialog-image": "שם הקובץ:",
 	"growthexperiments-addimage-detailsdialog-description": "תיאור:",
@@ -498,6 +502,7 @@
 	"growthexperiments-addimage-rejectiondialog-reason-lowquality": "התמונה באיכות נמוכה",
 	"growthexperiments-addimage-rejectiondialog-reason-unfamiliar": "הנושא לא מוכר לי",
 	"growthexperiments-addimage-rejectiondialog-reason-foreignlanguage": "אני לא {{GENDER:|יכול|יכולה}} לקרוא בשפה בפרטי התמנוה",
+	"growthexperiments-addimage-rejectiondialog-reason-sectionnotappropriate": "בפרק הזה לא צריכה להיות תמונה",
 	"growthexperiments-addimage-rejectiondialog-reason-other": "אחר",
 	"growthexperiments-addimage-viewer-close-button": "סגירה",
 	"growthexperiments-addimage-onboarding-content-intro-title": "תמונות עוזרות לאנשים ללמוד, אבל חסרות בערכים רבים.",
@@ -556,8 +561,15 @@
 	"growthexperiments-addimage-reason-wikipedia-languages": "משמשת באותו ערך {{PLURAL:$1|בשפה אחרת|ב־$1 שפות אחרות}}: $2.",
 	"growthexperiments-addimage-reason-wikipedia-languages-others": "{{PLURAL:$1|אחד אחר|$1 אחרים}}",
 	"growthexperiments-addimage-reason-wikipedia-project": "משמשת באותו ערך ב{{GRAMMAR:תחילית|$1}}.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment": "משמשת בפרק ערך מקביל {{PLURAL:$1|בשפה אחרת|ב־$1 שפות אחרות}}.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment-languages": "משמשת בפרק ערך מקביל {{PLURAL:$1|בשפה אחרת|ב־$1 שפות אחרות}}: $2.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment-project": "משמשת בפרק ערך מקביל באתר $1.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-single": "משמשת בפרק ערך מקביל באתר $1, ומתייחסת לפריט ויקינתונים שיכול להיות רלוונטי לפרק הערך הזה.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-multiple": "משמשת בפרק ערך מקביל באתר $1 ובעוד {{PLURAL:$2|שפה אחת|$2 שפות}}, ומתייחסת לפריט בוויקינתונים שעשוי להיות רלוונטי לפרק הערך הזה.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-languages": "משמשת בפרק ערך מקביל בעוד {{PLURAL:$1|שפה אחת|$1 שפות}}, ומתייחסת לפריט בוויקינתונים שעשוי להיות רלוונטי לפרק הערך הזה.",
 	"growthexperiments-addimage-reason-wikidata": "נמצאת בפריט הוויקינתונים עבור הערך הזה (התאמה חזקה).",
 	"growthexperiments-addimage-reason-commons": "אחת מתוך כמה תמונות שמקושרות לפריט הוויקינתונים עבור הערך הזה.",
+	"growthexperiments-addimage-reason-wikidata-section-topics": "מקושרת לפריט בוויקינתונים שיכול להיות רלוונטי לפרק הערך הזה.",
 	"growthexperiments-addimage-daily-task-limit-exceeded": "השלמת את כל הצעות הוספות התמונות להיום.\n\n{{GENDER:|כוונן|כוונני}} את רמות הקושי שלך כדי לראות סוגים אחרים של עריכה או {{GENDER:|חזור|חזרי}} מחר בשביל עוד הצעות תמונה.",
 	"growthexperiments-addimage-daily-task-limit-exceeded-dialog-button": "הבנתי",
 	"growthexperiments-addimage-caption-warning-tooshort": "כיתובים צריכים להיות באורך {{PLURAL:$1|תו אחד|$1 תווים}} או יותר.",
