--- a/i18n/homepage/pl.json
+++ b/i18n/homepage/pl.json
@@ -153,6 +153,8 @@
 	"tag-newcomer_task_add_link-description": "Zadanie „dodanie linków” zasugerowane przez moduł sugerowanych edycji z witryny domowej dla nowicjuszy",
 	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Zasugerowano edycję: dodanie ilustracji]]",
 	"tag-newcomer_task_image_suggestion-description": "Zadanie „dodanie ilustracji” zasugerowane przez moduł sugerowanych edycji z witryny domowej dla nowicjuszy",
+	"tag-newcomer_task_section_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-section-image|Zasugerowano edycję: dodanie ilustracji do sekcji]]",
+	"tag-newcomer_task_section_image_suggestion-description": "Zadanie „dodanie ilustracji do sekcji” zasugerowane przez moduł sugerowanych edycji ze strony domowej dla nowicjuszy",
 	"growthexperiments-homepage-help-dialog-title": "Zapytaj na forum pomocy",
 	"growthexperiments-homepage-help-header": "Uzyskaj pomoc w edytowaniu",
 	"growthexperiments-homepage-help-subheader": "Najważniejsze strony pomocy o edytowaniu",
@@ -272,7 +274,7 @@
 	"growthexperiments-homepage-suggestededits-difficulty-filters-title": "Wybierz rodzaje edycji",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-intro": "Sugerowanie edycji ma pomóc {{GENDER:|Ci}} nauczyć się edytować i doskonalić swoje umiejętności niezbędne do pracy nad większymi rodzajami zmian.",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-create-title": "Chcesz utworzyć nowy artykuł?",
-	"growthexperiments-homepage-suggestededits-difficulty-filters-create-body": "Redaktorzy {{GRAMMAR:D.lp|{{SITENAME}}}} zalecają, abyś najpierw {{GENDER:|spróbował|spróbowała}} wykonać kilka średnio trudnych i trudnych zadań, zanim przystąpisz do pisania nowego artykułu. [$1 Dowiedz się więcej] o pisaniu nowego brakującego artykułu.",
+	"growthexperiments-homepage-suggestededits-difficulty-filters-create-body": "Redaktorzy {{GRAMMAR:D.lp|{{SITENAME}}}} zalecają, abyś najpierw {{GENDER:|spróbował|spróbowała|spróbował(-a)}} wykonać kilka średnio trudnych i trudnych zadań, zanim przystąpisz do pisania nowego artykułu. [$1 Dowiedz się więcej] o pisaniu nowego artykułu.",
 	"growthexperiments-homepage-suggestededits-topic-filters-title": "Wybierz tematy",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-close": "Zrobione",
 	"growthexperiments-homepage-suggestededits-topic-filters-close": "Zrobione",
@@ -372,6 +374,8 @@
 	"logentry-growthexperiments-addlink": "$1 {{GENDER:$2|zobaczył|zobaczyła|zobaczył(-a)}} $4 {{PLURAL:$4|sugestię|sugestie|sugestii}} linkowania w $3: $5 {{GENDER:$2|zaakceptował|zaakceptowała|zaakceptował(-a)}}, $6 {{GENDER:$2|odrzucił|odrzuciła|odrzucił(-a)}} i $7 {{GENDER:$2|pominął|pominęła|pominął(-ęła)}}",
 	"logentry-growthexperiments-addimage-accepted": "$1 sprawdził{{GENDER:$2||a|(-a)}} propozycję artykułu dla $3: zaakceptował{{GENDER:$2||a|(-a)}}",
 	"logentry-growthexperiments-addimage-rejected": "$1 sprawdził{{GENDER:$2||a|(-a)}} propozycję artykułu dla $3: odrzucił{{GENDER:$2||a|(-a)}}",
+	"logentry-growthexperiments-addsectionimage-accepted": "$1 sprawdził{{GENDER:$2||a|(-a)}} propozycję ilustracji dla artykułu $3 (sekcji $4): zaakceptował{{GENDER:$2||a|(-a)}}",
+	"logentry-growthexperiments-addsectionimage-rejected": "$1 sprawdził{{GENDER:$2||a|(-a)}} propozycję ilustracji dla artykułu $3 (sekcji $4): odrzucił{{GENDER:$2||a|(-a)}}",
 	"log-action-filter-growthexperiments": "Rodzaj zdarzenia GrowthExperiments:",
 	"log-action-filter-growthexperiments-claimmentee": "Zmiana podopiecznych",
 	"log-action-filter-growthexperiments-setmentor": "Zmiana wikiprzewodnika",
@@ -483,6 +487,8 @@
 	"growthexperiments-addimage-inspector-help-button": "Uzyskaj pomoc w edycji",
 	"growthexperiments-addimage-inspector-details-button": "Wyświetl szczegóły obrazka",
 	"growthexperiments-addimage-inspector-description-placeholder": "Opis nie jest dostępny",
+	"growthexperiments-addsectionimage-inspector-title": "Dodaj ilustrację do sekcji artykułu",
+	"growthexperiments-addsectionimage-inspector-cta": "Dodać ten obraz do sekcji „$1” w artykule?",
 	"growthexperiments-addimage-detailsdialog-header": "Szczegóły grafiki",
 	"growthexperiments-addimage-detailsdialog-image": "Nazwa pliku:",
 	"growthexperiments-addimage-detailsdialog-description": "Opis:",
@@ -503,6 +509,7 @@
 	"growthexperiments-addimage-rejectiondialog-reason-lowquality": "Zdjęcie jest niskiej jakości",
 	"growthexperiments-addimage-rejectiondialog-reason-unfamiliar": "Nie znam się na tym temacie",
 	"growthexperiments-addimage-rejectiondialog-reason-foreignlanguage": "Nie rozumiem języka użytego w szczegółach pliku",
+	"growthexperiments-addimage-rejectiondialog-reason-sectionnotappropriate": "Sekcja nie powinna zawierać obrazu",
 	"growthexperiments-addimage-rejectiondialog-reason-other": "Inny",
 	"growthexperiments-addimage-viewer-close-button": "Zamknij",
 	"growthexperiments-addimage-onboarding-content-intro-title": "Ilustracje pomagają ludziom zapamiętywać informacje, ale wiele artykułów nie posiada obrazków.",
@@ -561,8 +568,15 @@
 	"growthexperiments-addimage-reason-wikipedia-languages": "Wykorzystany w tym samym artykule w $1 {{PLURAL:$1|innym języku|innych językach}}: $2.",
 	"growthexperiments-addimage-reason-wikipedia-languages-others": "$1 {{PLURAL:$1|innym|innych}}",
 	"growthexperiments-addimage-reason-wikipedia-project": "Wykorzystany w tym samym artykule w $1.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment": "Użyte w równoważnej sekcji artykułu w {{PLURAL:$1|jednym innym języku|$1 innych językach}}.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment-languages": "Użyte w równoważnej sekcji artykułu w {{PLURAL:$1|jednym innym języku|$1 innych językach}}: $2.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment-project": "Użyte w sekcji równoważnego artykułu w $1.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-single": "Użyte w sekcji równoważnego artykułu w $1 i odnosi się do elementu Wikidanych, który może być powiązany z tą sekcją.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-multiple": "Użyte w sekcji równoważnego artykułu w $1 oraz {{PLURAL:$2|jednym innym języku|$2 innych językach}} i odnosi się do elementu Wikidanych, który może być powiązany z tą sekcją.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-languages": "Użyte w sekcji równoważnego artykułu w {{PLURAL:$1|jednym innym języku|$1 innych językach}} i odnosi się do elementu Wikidanych, który może być powiązany z tą sekcją.",
 	"growthexperiments-addimage-reason-wikidata": "Odnaleziony w elemencie Wikidanych dla tego artykułu (silna więź).",
 	"growthexperiments-addimage-reason-commons": "Jeden z kilku obrazów dołączonych do elementu Wikidanych dla tego artykułu.",
+	"growthexperiments-addimage-reason-wikidata-section-topics": "Powiązany z elementem Wikidanych, który może być związany z tą sekcją.",
 	"growthexperiments-addimage-daily-task-limit-exceeded": "Przejrzał{{GENDER:|eś|aś|eś(-aś)}} wszystkie dzisiejsze sugestie obrazków.\n\nDostosuj swój poziom trudności, aby zobaczyć również inne rodzaje edycji albo wróć jutro po więcej propozycji obrazków.",
 	"growthexperiments-addimage-daily-task-limit-exceeded-dialog-button": "Wszystko jasne",
 	"growthexperiments-addimage-caption-warning-tooshort": "Podpis musi mieć co najmniej $1 {{PLURAL:$1|znak|znaki|znaków}}.",
@@ -576,6 +590,7 @@
 	"growthexperiments-addsectionimage-caption-info-dialog-guidelines-neutral": "Zachowaj neutralność, unikając słów takich jak „dobry”, „brzydki” czy „piękny”.",
 	"growthexperiments-addsectionimage-caption-info-dialog-guidelines-language": "Pisz w języku tego artykułu: $1.",
 	"growthexperiments-addsectionimage-caption-info-dialog-guidelines-language-generic": "Pisz w języku Wikipedii, na której jesteś.",
+	"growthexperiments-addsectionimage-summary-summary": "Funkcja sugerowania ilustracji: {{PLURAL:$1|dodana $1 ilustracja|dodane $1 ilustracje|dodane $1 ilustracji}}.",
 	"growthexperiments-addsectionimage-daily-task-limit-exceeded": "Zrealizował{{GENDER:|eś|aś|eś(-aś)}} wszystkie dzisiejsze sugestie ilustracji sekcji.\n\nDostosuj swój poziom trudności, aby zobaczyć również inne rodzaje edycji albo wróć jutro po więcej propozycji ilustracji do wstawienia.",
 	"growthexperiments-addsectionimage-daily-task-limit-exceeded-dialog-button": "Rozumiem",
 	"growthexperiments-homepage-mentorship-optin-header": "Przewodniczka(-nik) dla edytujących",
