--- a/i18n/homepage/ro.json
+++ b/i18n/homepage/ro.json
@@ -142,6 +142,8 @@
 	"tag-newcomer_task_add_link-description": "Editare sugerată de tip sarcină „Adăugați legătură” de modulul de editări sugerate din pagina acasă pentru nou-veniți",
 	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Sugerat: adăugați imagini]]",
 	"tag-newcomer_task_image_suggestion-description": "Editare sugerată de tip sarcină „Adăugați imagini” de modulul de editări sugerate din pagina acasă pentru nou-veniți",
+	"tag-newcomer_task_section_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-section-image|Sugerat: adăugați imagini la secțiuni]]",
+	"tag-newcomer_task_section_image_suggestion-description": "Editare sugerată de tip sarcină „Adăugați imagini la secțiuni” de modulul de editări sugerate din pagina acasă pentru nou-veniți",
 	"growthexperiments-homepage-help-dialog-title": "Întrebați la biroul de ajutor",
 	"growthexperiments-homepage-help-header": "Primiți ajutor cu editarea",
 	"growthexperiments-homepage-help-subheader": "Topul paginilor de ajutor pentru editare",
@@ -256,7 +258,7 @@
 	"growthexperiments-homepage-suggestededits-difficulty-filters-title": "Selectați tipuri de editări",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-intro": "Editările sugerate sunt concepute pentru a vă ajuta să învățați cum să editați și să deveniți mai {{GENDER:|priceput|pricepută}} pe măsură ce lucrați la tipuri mai mari de editări.",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-create-title": "Doriți să creați un articol nou?",
-	"growthexperiments-homepage-suggestededits-difficulty-filters-create-body": "Editorii {{SITENAME}} recomandă ca mai întâi {{GENDER:|să}} încercați câteva sarcini medii și grele înainte de a încerca crearea unui articol nou. [$1 Aflați mai multe] despre scrierea unui articol lipsă nou.",
+	"growthexperiments-homepage-suggestededits-difficulty-filters-create-body": "Editorii {{SITENAME}} recomandă ca mai întâi {{GENDER:|să}} încercați câteva sarcini medii și grele înainte de a încerca crearea unui articol nou. [$1 Aflați mai multe] despre scrierea unui nou articol.",
 	"growthexperiments-homepage-suggestededits-topic-filters-title": "Selectați subiecte",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-close": "Realizat",
 	"growthexperiments-homepage-suggestededits-topic-filters-close": "Realizat",
@@ -268,7 +270,7 @@
 	"growthexperiments-homepage-suggestededits-tasktype-name-links": "Adăugați legături între articole",
 	"growthexperiments-homepage-suggestededits-tasktype-name-link-recommendation": "Adăugați legături între articole",
 	"growthexperiments-homepage-suggestededits-tasktype-name-image-recommendation": "Adăugare de imagine la un articol neilustrat",
-	"growthexperiments-homepage-suggestededits-tasktype-name-section-image-recommendation": "Adăugare de imagine sugerată la o secțiune",
+	"growthexperiments-homepage-suggestededits-tasktype-name-section-image-recommendation": "Adăugare de imagine la o secțiune de articol",
 	"growthexperiments-homepage-suggestededits-tasktype-machine-description": "Sugestii automate",
 	"growthexperiments-homepage-suggestededits-topics-match-mode-description": "Alegeți opțiunea „Potrivește toate subiectele selectate” pentru rezultate mai specifice",
 	"growthexperiments-homepage-suggestededits-topics-match-mode-all": "Potrivește toate subiectele selectate",
@@ -356,6 +358,8 @@
 	"logentry-growthexperiments-addlink": "$1 a {{GENDER:$2|revizuit}} $4 {{PLURAL:$4|sugestie de legare|sugestii de legare}} pentru $3: $5 {{PLURAL:$5|acceptată|acceptate}}, $6 {{PLURAL:$6|respinsă|respinse}} și $7 {{PLURAL:$7|omisă|omise}}",
 	"logentry-growthexperiments-addimage-accepted": "$1 a {{GENDER:$2|revizuit}} o sugestie de imagine pentru $3: acceptat",
 	"logentry-growthexperiments-addimage-rejected": "$1 a {{GENDER:$2|revizuit}} o sugestie de imagine pentru $3: respins",
+	"logentry-growthexperiments-addsectionimage-accepted": "$1 a {{GENDER:$2|revizuit}} o sugestie de imagine pentru $3 (secțiunea $4): acceptat",
+	"logentry-growthexperiments-addsectionimage-rejected": "$1 a {{GENDER:$2|revizuit}} o sugestie de imagine pentru $3 (secțiunea $4): respins",
 	"log-action-filter-growthexperiments": "Tip de eveniment GrowthExperiments:",
 	"log-action-filter-growthexperiments-claimmentee": "Schimbări de ucenic",
 	"log-action-filter-growthexperiments-setmentor": "Schimbări de mentor",
@@ -411,11 +415,14 @@
 	"growthexperiments-addlink-onboarding-content-intro-body-example-label": "Propoziție exemplu",
 	"growthexperiments-addlink-onboarding-content-intro-body-example-text": "Luna este singurul <mark class=\"positive\">satelit natural</mark> care <mark class=\"positive\">orbitează</mark> în jurul <mark class=\"positive\">Pământului</mark>.",
 	"growthexperiments-addlink-onboarding-content-intro-body-paragraph2": "Nu este necesară vreo cunoaștere specială despre articol pentru a efectua această sarcină.",
+	"growthexperiments-addlink-onboarding-content-intro-image-alt-text": "Ilustrație a articolului Luna, cu articolele Pământ și Satelit fiind sugerate drept legături care ar putea fi adăugate textului asociat.",
 	"growthexperiments-addlink-onboarding-content-about-suggested-links-title": "Legăturile sugerate sunt generate automat, și pot fi incorecte.",
 	"growthexperiments-addlink-onboarding-content-about-suggested-links-body": "Sugestiile pot fi pentru cuvinte care nu au nevoie de ele, sau pot lega de articolul greșit. {{GENDER:$1|Utilizați-vă}} judecata pentru a decide dacă sunt corecte sau greșite.",
 	"growthexperiments-addlink-onboarding-content-about-suggested-links-body-learn-more-link-text": "Aflați mai mult despre sugestiile automate",
+	"growthexperiments-addlink-onboarding-content-about-image-alt-text": "Ilustrație a articolului Luna, lângă articol se află un robot reprezentând o sugestie automată - întrebând dacă un cuvânt din articolul Luna ar trebui legat de articolul Brânză.",
 	"growthexperiments-addlink-onboarding-content-linking-guidelines-title": "Îndrumări",
 	"growthexperiments-addlink-onboarding-content-linking-guidelines-body": "<li>Legați concepte despre care un cititor și-ar dori să afle mai multe.</li><li>Asigurați-vă că legătura duce către articolul corect.</li><li>Nu legați cuvinte, ani sau date comune.</li><li>Dacă nu sunteți {{GENDER:$1|sigur|sigură|sigur}}, omiteți.</li>",
+	"growthexperiments-addlink-onboarding-content-linking-image-alt-text": "Ilustrație a unei propoziții dintr-un articol prezentând sugestii de legare pentru două cuvinte diferite. Lângă sugestie se află o pictogramă bifă albastră și o pictogramă cruce roșie pentru opțiunile de a accepta sau respinge sugestia.",
 	"growthexperiments-structuredtask-onboarding-dialog-label-skip-all": "Omiteți tot",
 	"growthexperiments-structuredtask-onboarding-dialog-title": "Introducere",
 	"growthexperiments-structuredtask-onboarding-dialog-progress": "$1 din $2",
@@ -463,6 +470,8 @@
 	"growthexperiments-addimage-inspector-help-button": "Primiți ajutor cu editarea",
 	"growthexperiments-addimage-inspector-details-button": "Vezi detaliile imaginii",
 	"growthexperiments-addimage-inspector-description-placeholder": "Nicio descriere disponibilă",
+	"growthexperiments-addsectionimage-inspector-title": "Adăugare de imagine la o secțiune de articol",
+	"growthexperiments-addsectionimage-inspector-cta": "Adăugați această imagine la secțiunea de articol „$1”?",
 	"growthexperiments-addimage-detailsdialog-header": "Detaliile imaginii",
 	"growthexperiments-addimage-detailsdialog-image": "Numele fișierului:",
 	"growthexperiments-addimage-detailsdialog-description": "Descriere:",
@@ -483,20 +492,37 @@
 	"growthexperiments-addimage-rejectiondialog-reason-lowquality": "Imaginea are calitate joasă",
 	"growthexperiments-addimage-rejectiondialog-reason-unfamiliar": "Nu cunosc acest subiect",
 	"growthexperiments-addimage-rejectiondialog-reason-foreignlanguage": "Nu pot citi limba din detaliile imaginii",
+	"growthexperiments-addimage-rejectiondialog-reason-sectionnotappropriate": "Secțiunea nu ar trebui să aibă o imagine",
 	"growthexperiments-addimage-rejectiondialog-reason-other": "Altceva",
 	"growthexperiments-addimage-viewer-close-button": "Închide",
 	"growthexperiments-addimage-onboarding-content-intro-title": "Imaginile ajută oamenii să învețe, dar multe articole nu au una.",
 	"growthexperiments-addimage-onboarding-content-intro-body-paragraph1": "{{GENDER:|Dvs.}} veți decide dacă o imagine sugerată ar trebui pusă într-un articol Wikipedia.",
 	"growthexperiments-addimage-onboarding-content-intro-body-paragraph2": "Sugestiile sunt generate automat, iar dvs. {{GENDER:|vă}} veți utiliza judecata pentru a le accepta sau respinge.",
 	"growthexperiments-addimage-onboarding-content-intro-body-paragraph3": "Imaginile provin de la Wikimedia Commons, o colecție de imagini cu licență liberă utilizate de Wikipedia.",
+	"growthexperiments-addimage-onboarding-content-intro-image-alt-text": "Ilustrație a articolului Luna. Lângă ilustrația articolului se află un robot care întreabă dacă ar trebui adăugată articolului o imagine a lunii.",
 	"growthexperiments-addimage-onboarding-content-imagedetails-title": "Uitați-vă la imaginea sugerată",
 	"growthexperiments-addimage-onboarding-content-imagedetails-body-paragraph1": "Utilizați numele fișierului, descrierea și motivul pentru care a fost sugerată pentru a vă ajuta să decideți dacă ar {{GENDER:|trebui}} plasată în articol.",
 	"growthexperiments-addimage-onboarding-content-imagedetails-body-paragraph2": "{{GENDER:|Puteți}} de asemenea să măriți imaginea pentru a o vedea mai clar.",
+	"growthexperiments-addimage-onboarding-content-imagedetails-image-alt-text": "Ilustrație a unui articol. O imagine este sugerată pentru articol. Sugestia de imagine este mărită pentru a evidenția că sugestia de imagine și detaliile trebuie revizuite.",
 	"growthexperiments-addimage-onboarding-content-article-title": "Uitați-vă la articol",
 	"growthexperiments-addimage-onboarding-content-article-body": "Citiți din articol și gândiți-vă dacă imaginea sugerată va ajuta cititorii să înțeleagă conținutul. Este potrivită afișarea sa în articol?",
+	"growthexperiments-addimage-onboarding-content-article-image-alt-text": "Ilustrație a unui articol. La capătul articolului se află o sugestie de imagine.",
 	"growthexperiments-addimage-onboarding-content-decision-title": "Decideți dacă imaginea aparține",
 	"growthexperiments-addimage-onboarding-content-decision-body-paragraph1": "Sugestia ar putea să nu aibă legătură cu articolul, să aibă calitate joasă sau să nu aparțină din alte motive. {{GENDER:|Utilizați-vă}} judecata pentru a decide dacă sugestia este corectă sau greșită.",
-	"growthexperiments-addimage-onboarding-content-decision-body-paragraph2": "Pentru imaginile pe care le {{GENDER:|acceptați}}, {{GENDER:|veți}} scrie o descriere scurtă, iar apoi editarea {{GENDER:|dvs.}} va fi publicată.",
+	"growthexperiments-addimage-onboarding-content-decision-body-paragraph2": "După ce {{GENDER:|acceptați}} o imagine, {{GENDER:|veți}} scrie o descriere scurtă, iar după aceea vă {{GENDER:|veți}} putea publica {{GENDER:|modificarea}}.",
+	"growthexperiments-addimage-onboarding-content-decision-image-alt-text": "Ilustrație a unui articol. O imagine este sugerată pentru articol. Înăuntrul sugestiei se află trei butoane pictograme pentru opțiunile disponibile: o bifă pentru a accepta sugestia, o cruce pentru a respinge sugestia și o săgeată pentru a trece la pasul următor.",
+	"growthexperiments-addsectionimage-onboarding-content-step1-title": "Imaginile ajută oamenii să învețe, dar multe articole nu au una.",
+	"growthexperiments-addsectionimage-onboarding-content-step1-body-paragraph1": "{{GENDER:|Dvs.}} veți decide dacă o imagine sugerată ar trebui pusă într-o anumită secțiune a unui articol Wikipedia.",
+	"growthexperiments-addsectionimage-onboarding-content-step1-body-paragraph2": "Sugestiile sunt generate automat, iar dvs. {{GENDER:|vă}} veți utiliza judecata pentru a le accepta sau respinge.",
+	"growthexperiments-addsectionimage-onboarding-content-step1-body-paragraph3": "Imaginile provin de la Wikimedia Commons, o colecție de imagini cu licență liberă utilizate de Wikipedia.",
+	"growthexperiments-addsectionimage-onboarding-content-step2-title": "Uitați-vă la imaginea sugerată",
+	"growthexperiments-addsectionimage-onboarding-content-step2-body-paragraph1": "Utilizați numele fișierului, descrierea și motivul pentru care a fost sugerată pentru a vă ajuta să decideți dacă ar {{GENDER:|trebui}} plasată în articol.",
+	"growthexperiments-addsectionimage-onboarding-content-step2-body-paragraph2": "{{GENDER:|Puteți}} de asemenea să măriți imaginea pentru a o vedea mai clar.",
+	"growthexperiments-addsectionimage-onboarding-content-step3-title": "Uitați-vă atât la articol, cât și la secțiunea acestuia",
+	"growthexperiments-addsectionimage-onboarding-content-step3-body-paragraph1": "Citiți din articol și secțiunea acestuia și gândiți-vă dacă imaginea sugerată va ajuta cititorii să înțeleagă conținutul. Este potrivită afișarea sa în secțiune?",
+	"growthexperiments-addsectionimage-onboarding-content-step4-title": "Decideți dacă imaginea aparține",
+	"growthexperiments-addsectionimage-onboarding-content-step4-body-paragraph1": "Sugestia ar putea să nu aibă legătură cu secțiunea, să aibă calitate joasă sau să nu aparțină din alte motive. {{GENDER:|Utilizați-vă}} judecata pentru a decide dacă sugestia este corectă sau greșită.",
+	"growthexperiments-addsectionimage-onboarding-content-step4-body-paragraph2": "După ce {{GENDER:|acceptați}} o imagine, {{GENDER:|veți}} scrie o descriere scurtă, iar după aceea vă {{GENDER:|veți}} putea publica {{GENDER:|modificarea}}.",
 	"growthexperiments-addimage-skip-dialog-title": "Nu sunteți {{GENDER:|sigur|sigură}} în legătură cu această imagine?",
 	"growthexperiments-addimage-skip-dialog-body": "Confirmați că {{GENDER:|vreți}} să omiteți această sugestie.",
 	"growthexperiments-addimage-skip-dialog-confirm": "Omite sugestia",
@@ -525,13 +551,31 @@
 	"growthexperiments-addimage-reason-wikipedia-languages": "Utilizată în același articol în $1 {{PLURAL:$1|altă limbă|alte limbi}}: $2.",
 	"growthexperiments-addimage-reason-wikipedia-languages-others": "{{PLURAL:$1|încă}} $1",
 	"growthexperiments-addimage-reason-wikipedia-project": "Utilizată în același articol în $1.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment": "Utilizată într-o secțiune de articol echivalent în {{PLURAL:$1|încă 1 limbă|$1 alte limbi}}.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment-languages": "Utilizată într-o secțiune de articol echivalent în $1 {{PLURAL:$1|altă limbă|alte limbi}}: $2.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment-project": "Utilizată într-o secțiune de articol echivalent la $1.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-single": "Utilizată într-o secțiune de articol echivalent în $1, și este legată de un element Wikidata care s-ar putea să fie relevant pentru această secțiune de articol.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-multiple": "Utilizată într-o secțiune de articol echivalent în $1 și {{PLURAL:$2|încă 1 limbă|încă $2 limbi}}, și este legată de un element Wikidata care s-ar putea să fie relevant pentru această secțiune de articol.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-languages": "Utilizată într-o secțiune de articol echivalent în {{PLURAL:$1|încă 1 limbă|$1 alte limbi}}, și este legată de un element Wikidata care s-ar putea să fie relevant pentru această secțiune de articol.",
 	"growthexperiments-addimage-reason-wikidata": "Găsită în elementul Wikidata pentru acest articol (potrivire calitativă).",
 	"growthexperiments-addimage-reason-commons": "Una dintre cele câteva imagini legate de elementul Wikidata pentru acest articol.",
+	"growthexperiments-addimage-reason-wikidata-section-topics": "Legat la un element Wikidata care s-ar putea să fie relevant pentru această secțiune de articol.",
 	"growthexperiments-addimage-daily-task-limit-exceeded": "{{GENDER:|Ați}} finalizat toate sugestiile de imagine pentru astăzi. \n\n{{GENDER:|Ajustați-vă}} nivelurile de dificultate pentru a vedea alte tipuri de editări sau reveniți mâine pentru mai multe sugestii de imagine.",
 	"growthexperiments-addimage-daily-task-limit-exceeded-dialog-button": "Am înțeles",
 	"growthexperiments-addimage-caption-warning-tooshort": "Descrierile scurte trebuie să aibă $1 {{PLURAL:$1|caracter|caractere}} sau mai mult.",
 	"growthexperiments-addlink-daily-task-limit-exceeded": "{{GENDER:|Ați}} finalizat toate sugestiile de legare pentru astăzi. \n\n{{GENDER:|Ajustați-vă}} nivelurile de dificultate pentru a vedea alte tipuri de editări sau reveniți mâine pentru mai multe sugestii de legare.",
 	"growthexperiments-addlink-daily-task-limit-exceeded-dialog-button": "Am înțeles",
+	"growthexperiments-addsectionimage-caption-placeholder": "Scrieți o descriere scurtă care să descrie cum este relevantă această imagine atât pentru articolul <strong>$1</strong>, cât și pentru secțiunea <strong>$2</strong> a acestuia",
+	"growthexperiments-addsectionimage-caption-info-dialog-title": "Scrieți o descriere scurtă care să se potrivească cu imaginea din secțiunea de articol",
+	"growthexperiments-addsectionimage-caption-info-dialog-message": "Cititorii articolului <strong>$1</strong> vor vedea descrierea scurtă afișată sub imagine.",
+	"growthexperiments-addsectionimage-caption-info-dialog-guidelines-review": "Revizuiți detaliile imaginii din nou pentru informații relevante care să ajungă incluse.",
+	"growthexperiments-addsectionimage-caption-info-dialog-guidelines-describe": "Descrieți imaginea astfel încât să fie clar cum are aceasta legătură cu articolul <strong>$1</strong> și secțiunea <strong>$2</strong> a acestuia.",
+	"growthexperiments-addsectionimage-caption-info-dialog-guidelines-neutral": "Folosiți un ton neutru, evitând judecăți precum „bun”, „urât” sau „frumos”.",
+	"growthexperiments-addsectionimage-caption-info-dialog-guidelines-language": "Scrieți în limba acestui articol: $1.",
+	"growthexperiments-addsectionimage-caption-info-dialog-guidelines-language-generic": "Scrieți în limba Wikipediei pe care vă {{GENDER:|aflați}}.",
+	"growthexperiments-addsectionimage-summary-summary": "Funcția de sugestii de imagine: $1 {{PLURAL:$1|imagine adăugată|imagini adăugate}}.",
+	"growthexperiments-addsectionimage-daily-task-limit-exceeded": "{{GENDER:|Ați}} finalizat toate sugestiile de imagine la nivel de secțiune pentru astăzi. \n\n{{GENDER:|Ajustați-vă}} nivelurile de dificultate pentru a vedea alte tipuri de editări sau reveniți mâine pentru mai multe sugestii de imagine.",
+	"growthexperiments-addsectionimage-daily-task-limit-exceeded-dialog-button": "Am înțeles",
 	"growthexperiments-homepage-mentorship-optin-header": "Mentor pentru editare",
 	"growthexperiments-homepage-mentorship-optin-text": "Dacă {{GENDER:|aveți}} întrebări despre editare, atunci un utilizator experimentat poate fi atribuit ca mentorul dvs. pentru a vă ajuta.",
 	"growthexperiments-homepage-mentorship-optin-button": "Primiți un mentor",
