--- a/i18n/homepage/sl.json
+++ b/i18n/homepage/sl.json
@@ -142,6 +142,8 @@
 	"tag-newcomer_task_add_link-description": "Opravilo urejanja »Dodaj povezavo«, ki ga je predlagal modul za urejanja na domači strani za začetnike",
 	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|naloga začetnika: dodaj slike]]",
 	"tag-newcomer_task_image_suggestion-description": "Naloga urejanja »dodaj slike«, ki jo je predlagal modul za urejanja na domači strani za začetnike",
+	"tag-newcomer_task_section_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-section-image|Predlagano: dodaj slike razdelkom]]",
+	"tag-newcomer_task_section_image_suggestion-description": "Naloga urejanja »dodaj slike razdelkom«, ki jo je predlagal modul za urejanja na domači strani za začetnike",
 	"growthexperiments-homepage-help-dialog-title": "Vprašanje forum za pomoč",
 	"growthexperiments-homepage-help-header": "Pridobite pomoč za urejanje",
 	"growthexperiments-homepage-help-subheader": "Osnovne strani s pomočjo za urejanje",
@@ -261,7 +263,7 @@
 	"growthexperiments-homepage-suggestededits-difficulty-filters-title": "Izberite vrste urejanj",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-intro": "Predlagana urejanja so zasnovana tako, da vam pomagajo pri učenju urejanja, pri  postajate spretnejši, ko preizkušate različne vrste urejanja.",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-create-title": "Želite ustvariti nov članek?",
-	"growthexperiments-homepage-suggestededits-difficulty-filters-create-body": "Uredniki {{SITENAME}} priporočajo, da najprej preizkusite nekaj srednje zahtevnih in težkih nalog, preden se lotite novega članka. [$1 Več o pisanju] novega manjkajočega članka.",
+	"growthexperiments-homepage-suggestededits-difficulty-filters-create-body": "Urejevalci {{SITENAME}} priporočajo, da najprej preizkusite nekaj srednje zahtevnih in težkih nalog, preden se lotite novega članka. [$1 Več o pisanju] novega manjkajočega članka.",
 	"growthexperiments-homepage-suggestededits-topic-filters-title": "Izberite teme",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-close": "Končano",
 	"growthexperiments-homepage-suggestededits-topic-filters-close": "Končano",
@@ -474,6 +476,8 @@
 	"growthexperiments-addimage-inspector-help-button": "Pridobite pomoč za urejanje",
 	"growthexperiments-addimage-inspector-details-button": "Prikaži informacije o sliki",
 	"growthexperiments-addimage-inspector-description-placeholder": "Opis ni na voljo",
+	"growthexperiments-addsectionimage-inspector-title": "Dodajanje slike v razdelek članka",
+	"growthexperiments-addsectionimage-inspector-cta": "Želite dodati to sliko v razdelek članka »$1«?",
 	"growthexperiments-addimage-detailsdialog-header": "Informacije o sliki",
 	"growthexperiments-addimage-detailsdialog-image": "Ime datoteke:",
 	"growthexperiments-addimage-detailsdialog-description": "Opis:",
@@ -494,6 +498,7 @@
 	"growthexperiments-addimage-rejectiondialog-reason-lowquality": "Slika je slabe kakovosti",
 	"growthexperiments-addimage-rejectiondialog-reason-unfamiliar": "Te teme ne poznam",
 	"growthexperiments-addimage-rejectiondialog-reason-foreignlanguage": "Ne razumem jezika v informacijah o sliki",
+	"growthexperiments-addimage-rejectiondialog-reason-sectionnotappropriate": "Razdelek ne sme imeti slike",
 	"growthexperiments-addimage-rejectiondialog-reason-other": "Drugo",
 	"growthexperiments-addimage-viewer-close-button": "Zapri",
 	"growthexperiments-addimage-onboarding-content-intro-title": "Slike pomagajo ljudem pri učenju, vendar jih veliko člankov nima.",
@@ -552,8 +557,15 @@
 	"growthexperiments-addimage-reason-wikipedia-languages": "Uporabljeno v istem članku v $1 {{PLURAL:$1|drugem jeziku|drugih jezikih}}: $2.",
 	"growthexperiments-addimage-reason-wikipedia-languages-others": "{{PLURAL:$1|drug|druga|drugi|drugih}}",
 	"growthexperiments-addimage-reason-wikipedia-project": "Uporabljeno v istem članku v $1.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment": "Uporabljeno v enakovrednem razdelku članka v {{PLURAL:$1|enem drugem jeziku|$1 drugih jezikih}}.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment-languages": "Uporabljeno v enakovrednem razdelku članka v $1 {{PLURAL:$1|drugem jeziku|drugih jezikih}}: $2.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment-project": "Uporabljeno v enakovrednem razdelku članka v $1.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-single": "Uporablja se v enakovrednem razdelku članka v $1 in se nanaša na predmet Wikipodatkov, ki bi lahko bil relevanten za ta razdelek članka.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-multiple": "Uporabljeno v enakovrednem razdelku članka v $1 in {{PLURAL:$2|še enem jeziku|še $2 jezikih}} in se nanaša na predmet Wikipodatkov, ki bi lahko bil relevanten za ta razdelek članka.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-languages": "Uporabljeno v enakovrednem razdelku članka v {{PLURAL:$1|drugem jeziku|$1 drugih jezikih}} in se nanaša na predmet Wikipodatkov, ki bi lahko bil relevanten za ta razdelek članka.",
 	"growthexperiments-addimage-reason-wikidata": "Najdeno v predmetu Wikipodatkov za ta članek (močno ujemanje).",
 	"growthexperiments-addimage-reason-commons": "Ena od več slik, povezanih s predmetom Wikipodatkov za ta članek.",
+	"growthexperiments-addimage-reason-wikidata-section-topics": "Povezano s predmetom Wikipodatkov, ki bi lahko bil relevanten za ta razdelek članka.",
 	"growthexperiments-addimage-daily-task-limit-exceeded": "{{GENDER:|Pregledali}} ste vse današnje predloge za slike.\n\nPrilagodite {{GENDER:|si}} raven težavnosti, da boste videli še druge vrste urejanj, ali se vrnite jutri po več predlogov za slike.",
 	"growthexperiments-addimage-daily-task-limit-exceeded-dialog-button": "Razumem",
 	"growthexperiments-addimage-caption-warning-tooshort": "Napisi morajo obsegati $1 {{PLURAL:$1|znak|znaka|znake|znakov}} ali več.",
