--- a/i18n/homepage/sr-ec.json
+++ b/i18n/homepage/sr-ec.json
@@ -224,7 +224,7 @@
 	"growthexperiments-homepage-suggestededits-tasktype-name-links": "Додавање унутрашњих веза",
 	"growthexperiments-homepage-suggestededits-tasktype-name-link-recommendation": "Додавање линкова међу чланцима",
 	"growthexperiments-homepage-suggestededits-tasktype-name-image-recommendation": "Додај слику у неилустрован чланак",
-	"growthexperiments-homepage-suggestededits-tasktype-name-section-image-recommendation": "Додај предложену слику у одељак чланка",
+	"growthexperiments-homepage-suggestededits-tasktype-name-section-image-recommendation": "Додај слику у одељак чланка",
 	"growthexperiments-homepage-suggestededits-tasktype-machine-description": "Машински предлог",
 	"growthexperiments-homepage-suggestededits-topic-name-biography": "Биографија (све)",
 	"growthexperiments-homepage-suggestededits-topic-name-women": "Биографија (жене)",
@@ -284,7 +284,7 @@
 	"growthexperiments-homepage-suggestededits-topics-unselectall": "Уклони све",
 	"growthexperiments-homepage-topic-filters-dialog-intro-topic-selector-header": "Изаберите теме које {{GENDER:$1|вас}} занимају",
 	"growthexperiments-homepage-claimmentee-title": "Преузимање новајлије",
-	"growthexperiments-homepage-claimmentee-pretext": "Ова страница {{GENDER:$1|вам}} омогућава да преузмете новајлију коју желите. Препоручујемо да употребљавате функцију за преузимање корисника које познајете или оних које подучавате на неком курсу.",
+	"growthexperiments-homepage-claimmentee-pretext": "Ова страница {{GENDER:$1|Вам}} омогућава да преузмете новајлију кога желите. Препоручујемо да употребљавате ову функцију за преузимање корисника које познајете или оних које подучавате на неком курсу.",
 	"growthexperiments-homepage-claimmentee-mentee": "Корисничко име",
 	"growthexperiments-homepage-claimmentee-reason": "Разлог",
 	"growthexperiments-homepage-claimmentee-success": "Променили {{GENDER:$3|сте}} ментора за {{PLURAL:$2|корисника|кориснике}} $1. {{GENDER:$4|Нови ментор|Нова менторка}} је $5. Назад на [[Special:MentorDashboard|таблу]].",
@@ -355,6 +355,7 @@
 	"growthexperiments-addimage-inspector-no-button": "Не",
 	"growthexperiments-addimage-inspector-skip-button": "{{GENDER:|Нисам сигуран}}",
 	"growthexperiments-addimage-inspector-description-placeholder": "Опис није доступан",
+	"growthexperiments-addsectionimage-inspector-title": "Додавање слике у одељак",
 	"growthexperiments-addimage-detailsdialog-header": "Детаљи слике",
 	"growthexperiments-addimage-detailsdialog-image": "Назив датотеке:",
 	"growthexperiments-addimage-detailsdialog-description": "Опис:",
