--- a/i18n/mentorship/es.json
+++ b/i18n/mentorship/es.json
@@ -160,7 +160,7 @@
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-positive-message-headline": "Tu mensaje predefinido",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-positive-message-subject": "Tema",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-positive-message-placeholder": "...",
-	"growthexperiments-mentor-dashboard-personalized-praise-settings-positive-message-help-text": "En el mensaje positivo predeterminado, $1 se sustituye automáticamente por el nombre de usuario/a de tu aprendiz (si existe).",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-positive-message-help-text": "En el mensaje positivo predeterminado, $1 se sustituye automáticamente por el nombre de usuario/a de tu aprendiz y $2 por el de la persona mentora.",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-notifications-headline": "Notificaciones",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-notifications-immediately": "Inmediatamente",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-notifications-daily": "Diario",
@@ -178,6 +178,7 @@
 	"growthexperiments-mentor-writer-error-not-in-the-list": "El mentor $1 no está en la lista de mentores",
 	"growthexperiments-mentor-writer-error-anonymous-user": "Mentor $1 no es un usuario registrado",
 	"growthexperiments-mentor-writer-error-message-too-long": "El mensaje de introducción es demasiado largo (ID de usuario afectado: $2). La longitud máxima es de $1.",
+	"growthexperiments-mentor-writer-error-blocked": "{{GENDER:|Has}} sido bloqueado por editar la lista de personas mentoras",
 	"growthexperiments-manage-mentors-title": "Gestionar mentores/as",
 	"growthexperiments-manage-mentors-pretext-purpose": "Esta página muestra la lista de mentores/as.",
 	"growthexperiments-manage-mentors-pretext-privileged": "Puedes eliminar a los mentores o mentoras que infrinjan las normas o políticas de la comunidad, así como editar su configuración relacionada con la mentoría.",
