--- a/i18n/homepage/fr.json
+++ b/i18n/homepage/fr.json
@@ -36,9 +36,9 @@
 	"growthexperiments-homepage-specialpage-title": "Bonjour, {{GENDER:$1|}}{{bidi:$1}} !",
 	"growthexperiments-homepage-tab": "Page d’accueil",
 	"tooltip-pt-homepage": "{{GENDER:|}}Votre page d’accueil",
-	"prefs-homepage": "Fonctionnalités d’éditeur pour nouveaux venus",
-	"growthexperiments-homepage-enable": "Afficher la page d’accueil de novice",
-	"growthexperiments-homepage-pt-link": "Dans les outils personnels, faire du nom d’utilisateur un lien vers la page d’accueil des nouveaux",
+	"prefs-homepage": "Fonctionnalités d’éditeur pour novices",
+	"growthexperiments-homepage-enable": "Afficher la page d’accueil des novices",
+	"growthexperiments-homepage-pt-link": "Dans les outils personnels, faire du nom d’utilisateur un lien vers la page d’accueil des novices",
 	"growthexperiments-homepage-email-header-noemail": "Ajouter {{GENDER:$1|}}votre adresse de courriel",
 	"growthexperiments-homepage-email-header-unconfirmed": "Confirmer {{GENDER:$1|}}votre adresse de courriel",
 	"growthexperiments-homepage-email-header-confirmed": "Adresse de courriel ajoutée",
@@ -149,27 +149,29 @@
 	"growthexperiments-tour-mentor-response-tip-personal-text": "Quand {{GENDER:$1|}}votre tut{{GENDER:$2|eur|trice}} aura répondu, {{GENDER:$1|}}vous aurez une nouvelle alerte ici.",
 	"growthexperiments-tour-response-button-okay": "Compris !",
 	"tag-help_module_question": "Question du module d’aide",
-	"tag-help_module_question-description": "Modification faite depuis la fonction « Poser une question » du module d’aide de la page d’accueil",
+	"tag-help_module_question-description": "Modification effectuée depuis la fonctionnalité « Poser une question » du module d’aide de la page d’accueil",
 	"tag-mentorship_module_question": "Question du module de tutorat",
-	"tag-mentorship_module_question-description": "Modification faite depuis la fonctionnalité « Demander à votre tuteur » du module de tutorat de la page d’accueil",
+	"tag-mentorship_module_question-description": "Modification effectuée depuis la fonctionnalité « Demander à votre tuteur » du module de tutorat de la page d’accueil",
 	"tag-mentorship_panel_question": "Question du panneau de tutorat",
-	"tag-mentorship_panel_question-description": "Modification faite depuis la fonction « Demander à votre tuteur » du panneau d’aide",
-	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Tâche de novice]]",
-	"tag-newcomer_task-description": "Modification suggérée par le module de modifications suggérées de la page d’accueil des nouveaux arrivants",
-	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Tâche de novice : relecture]]",
-	"tag-newcomer_task_copyedit-description": "Tâche de « modification de copie » suggérée par le module de modifications suggérées de la page d’accueil des novices",
-	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Tâche de novice : références]]",
-	"tag-newcomer_task_references-description": "Tâche de « références » suggérée par le module de modifications suggérées de la page d’accueil des novices",
-	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Tâche de novice : mise à jour]]",
-	"tag-newcomer_task_update-description": "Tâche de « mise à jour » suggérée par le module de modifications suggérées de la page d’accueil des novices",
-	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Tâche de novice : développement]]",
-	"tag-newcomer_task_expand-description": "Tâche de « développement » suggérée par le module de modifications suggérées de la page d’accueil des novices",
-	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|Tâche de novice : liens]]",
-	"tag-newcomer_task_links-description": "Tâche de « liens » suggérée par le module de modifications suggérées de la page d’accueil des novices",
+	"tag-mentorship_panel_question-description": "Modification effectuée depuis la fonctionnalité « Demander à votre tuteur » du panneau d’aide",
+	"tag-newcomer_task": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks|Tâche pour novices]]",
+	"tag-newcomer_task-description": "Modification suggérée par le module de modifications suggérées de la page d’accueil des novices",
+	"tag-newcomer_task_copyedit": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#copyedit|Tâche pour novices : relecture et correction]]",
+	"tag-newcomer_task_copyedit-description": "Tâche de modification pour « relecture et correction » suggérée par le module de modifications suggérées de la page d’accueil des novices",
+	"tag-newcomer_task_references": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addref|Tâche pour novices : références]]",
+	"tag-newcomer_task_references-description": "Tâche de modification des « références » suggérée par le module de modifications suggérées de la page d’accueil des novices",
+	"tag-newcomer_task_update": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#update|Tâche pour novices : mise à jour]]",
+	"tag-newcomer_task_update-description": "Tâche de modification pour « mise à jour » suggérée par le module de modifications suggérées de la page d’accueil des novices",
+	"tag-newcomer_task_expand": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#expand|Tâche pour novices : développement]]",
+	"tag-newcomer_task_expand-description": "Tâche de modification de « développement » suggérée par le module de modifications suggérées de la page d’accueil des novices",
+	"tag-newcomer_task_links": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#addlink|Tâche pour novices : liens]]",
+	"tag-newcomer_task_links-description": "Tâche de modification de « liens » suggérée par le module de modifications suggérées de la page d’accueil des novices",
 	"tag-newcomer_task_add_link": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-link|Suggéré : ajouter des liens]]",
-	"tag-newcomer_task_add_link-description": "Modification de tâche « Ajouter un lien » suggérée par le module de modifications suggérées de la page d’accueil pour nouveau venu.",
+	"tag-newcomer_task_add_link-description": "Tâche de modification pour « ajouter un lien » suggérée par le module de modifications suggérées de la page d’accueil des novices.",
 	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Suggéré : ajouter des images]]",
-	"tag-newcomer_task_image_suggestion-description": "Modification de tâche « Ajouter des images » suggérée par le module des modifications suggérées de la page d’accueil du débutant",
+	"tag-newcomer_task_image_suggestion-description": "Tâche de modification pour « ajouter des images » suggérée par le module des modifications suggérées de la page d’accueil du débutant",
+	"tag-newcomer_task_section_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-section-image|Suggéré : ajouter des images aux sections]]",
+	"tag-newcomer_task_section_image_suggestion-description": "Tâche de modification pour « ajouter des images aux sections » suggérée par le module de modifications suggérées de la page d’accueil des novices",
 	"growthexperiments-homepage-help-dialog-title": "Demander au Centre d’assistance",
 	"growthexperiments-homepage-help-header": "Être aidé dans la modification d’une page",
 	"growthexperiments-homepage-help-subheader": "Meilleures pages d’aide à la rédaction",
@@ -204,7 +206,7 @@
 	"growthexperiments-homepage-claimmentee-no-user": "Le tutoré n’existe pas",
 	"growthexperiments-homepage-claimmentee-already-mentor": "Vous êtes déjà tut{{GENDER:$2|eur|rice}} de $1",
 	"growthexperiments-homepage-claimmentee-opt-out": "$1 s’est désisté{{GENDER:$1||e}} du tutorat",
-	"growthexperiments-homepage-enable-preference": "Pour activer la page d’accueil des nouveaux venus, consultez vos paramètres des « Fonctionnalités d’éditeur de nouvel arrivant » dans [[Special:Preferences#mw-prefsection-personal-homepage|vos préférences]].",
+	"growthexperiments-homepage-enable-preference": "Pour activer la page d’accueil des novices, consultez vos paramètres des « Fonctionnalités pour modificateurs novices » dans [[Special:Preferences#mw-prefsection-personal-homepage|vos préférences]].",
 	"growthexperiments-homepage-contributions-zero-title": "{{GENDER:$1|}}Vous n’avez encore fait aucune contribution.",
 	"growthexperiments-homepage-contributions-zero-subtitle": "Visitez {{GENDER:$1|}}votre page d’accueil pour commencer à modifier !",
 	"growthexperiments-homepage-contributions-zero-button": "Aller sur {{GENDER:$1|}}votre page d’accueil",
@@ -289,7 +291,7 @@
 	"growthexperiments-homepage-suggestededits-difficulty-filters-title": "Sélectionner les types de modification",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-intro": "Les modifications suggérées sont conçues pour {{GENDER:|}}vous aider à apprendre à modifier et à devenir plus compétent lorsque vous travaillez sur des types de modifications plus importants.",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-create-title": "Vous souhaitez créer un nouvel article ?",
-	"growthexperiments-homepage-suggestededits-difficulty-filters-create-body": "Les rédacteurs de {{SITENAME}} {{GENDER:|}}vous recommandent d’essayer d’abord quelques tâches moyennes et difficiles avant de tenter un nouvel article. [$1 En savoir plus] sur la rédaction d’un nouvel article manquant.",
+	"growthexperiments-homepage-suggestededits-difficulty-filters-create-body": "Les rédacteurs de {{SITENAME}} {{GENDER:|}}vous recommandent d’essayer d’abord quelques tâches moyennes et difficiles avant de tenter un nouvel article. [$1 En savoir plus] sur la rédaction d’un nouvel article.",
 	"growthexperiments-homepage-suggestededits-topic-filters-title": "Sélectionner les sujets",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-close": "Fait",
 	"growthexperiments-homepage-suggestededits-topic-filters-close": "Fait",
@@ -378,7 +380,7 @@
 	"growthexperiments-homepage-claimmentee-mentee": "Nom d’utilisateur du tutoré",
 	"growthexperiments-homepage-claimmentee-reason": "Motif pour demander ce tutoré",
 	"growthexperiments-homepage-claimmentee-success": "{{GENDER:$3|}}Vous avez modifié l{{GENDER:$4|e|a}} tut{{GENDER:$4|eur|rice}} affecté{{GENDER:$4||e}} à {{PLURAL:$2|}}$1 et avez désigné {{GENDER:$4|}}$5. Retourner au [[Special:MentorDashboard|tableau de bord des tuteurs]].",
-	"growthexperiments-homepage-claimmentee-alreadychanged": "Le tuteur de {{GENDER:$1|}}$1 a déjà été modifié. Êtes-vous sûr{{GENDER:$2||e}} de vouloir le modifier de nouveau ?",
+	"growthexperiments-homepage-claimmentee-alreadychanged": "Le tuteur de {{GENDER:$1|}}$1 a déjà été modifié. Êtes-vous sûr{{GENDER:$2||e}} de vouloir le modifier à nouveau ?",
 	"growthexperiments-claimmentee-confirm": "Oui, je veux vraiment continuer",
 	"growthexperiments-log-name": "Journal de GrowthExperiments",
 	"growthexperiments-log-header": "Ceci est un journal des actions effectuées dans l’extension GrowthExperiments.",
@@ -474,9 +476,9 @@
 	"growthexperiments-addlink-skip-accept": "Sauter tout",
 	"growthexperiments-addlink-skip-reject": "Revoir à nouveau",
 	"grant-managementorship": "Gérer le tutorat",
-	"newcomertasksinfo": "Tâches de novice",
+	"newcomertasksinfo": "Tâches pour novices",
 	"newcomertasksinfo-no-data": "Aucune donnée disponible.",
-	"newcomertasksinfo-config-form-info": "La configuration des tâches de novice peut être vue et modifiée sur [[Special:EditGrowthConfig]].",
+	"newcomertasksinfo-config-form-info": "La configuration des tâches pour novices peut être vue et modifiée sur [[Special:EditGrowthConfig]].",
 	"newcomertasksinfo-table-header-task-type": "Type de tâche",
 	"newcomertasksinfo-table-header-task-type-id": "Identifiant",
 	"newcomertasksinfo-table-header-task-count": "Compteur",
@@ -502,6 +504,8 @@
 	"growthexperiments-addimage-inspector-help-button": "Obtenir de l’aide pour modifier",
 	"growthexperiments-addimage-inspector-details-button": "Voir les détails de l’image",
 	"growthexperiments-addimage-inspector-description-placeholder": "Aucune description disponible",
+	"growthexperiments-addsectionimage-inspector-title": "Ajouter une image à une section d’article",
+	"growthexperiments-addsectionimage-inspector-cta": "Ajouter cette image à la section « $1 » de l’article ?",
 	"growthexperiments-addimage-detailsdialog-header": "Détails de l’image",
 	"growthexperiments-addimage-detailsdialog-image": "Nom du fichier :",
 	"growthexperiments-addimage-detailsdialog-description": "Description :",
@@ -522,6 +526,7 @@
 	"growthexperiments-addimage-rejectiondialog-reason-lowquality": "L’image est de mauvaise qualité",
 	"growthexperiments-addimage-rejectiondialog-reason-unfamiliar": "Je ne connais pas ce sujet",
 	"growthexperiments-addimage-rejectiondialog-reason-foreignlanguage": "Je ne sais pas lire la langue dans les détails de l’image.",
+	"growthexperiments-addimage-rejectiondialog-reason-sectionnotappropriate": "La section ne doit pas avoir d’image",
 	"growthexperiments-addimage-rejectiondialog-reason-other": "Autre",
 	"growthexperiments-addimage-viewer-close-button": "Fermer",
 	"growthexperiments-addimage-onboarding-content-intro-title": "Les images aident les gens à comprendre, mais de nombreux articles n’en comportent pas.",
@@ -580,8 +585,15 @@
 	"growthexperiments-addimage-reason-wikipedia-languages": "Utilisé dans le même article en $1 autre{{PLURAL:$1||s}} langue{{PLURAL:$1||s}} : $2.",
 	"growthexperiments-addimage-reason-wikipedia-languages-others": "$1 autre{{PLURAL:$1||s}}",
 	"growthexperiments-addimage-reason-wikipedia-project": "Utilisé dans le même article en $1.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment": "Utilisé dans une section d’article équivalente en {{PLURAL:$1|une|$1}} autre{{PLURAL:$1||s}} langue{{PLURAL:$1||s}}.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment-languages": "Utilisé dans une section d’article équivalente en {{PLURAL:$1|une|$1}} autre{{PLURAL:$1||s}} langue{{PLURAL:$1||s}} : $2.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment-project": "Utilisé dans une section d’article équivalente en $1.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-single": "Utilisé dans une section d’article équivalente en $1 et qui se rapporte à un élément Wikidata qui pourrait être pertinent pour cette section d’article.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-multiple": "Utilisé dans une section d’article équivalente en $1 et {{PLURAL:$2|une|$2}} autre{{PLURAL:$2||s}} langue{{PLURAL:$2||s}} et qui se rapporte à un élément Wikidata qui peut être pertinent pour cette section d’article.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-languages": "Utilisé dans une section d’article équivalente en {{PLURAL:$1|une|$1}} autre{{PLURAL:$1||s}} langue{{PLURAL:$1||s}} et qui se rapporte à un élément Wikidata qui peut être pertinent pour cette section d’article.",
 	"growthexperiments-addimage-reason-wikidata": "Trouvé dans l’élément Wikidata pour cet article (correspondance forte).",
 	"growthexperiments-addimage-reason-commons": "Une des images liées à l’élément Wikidata pour cet article.",
+	"growthexperiments-addimage-reason-wikidata-section-topics": "Lié à un élément Wikidata qui peut être pertinent pour cette section d’article.",
 	"growthexperiments-addimage-daily-task-limit-exceeded": "{{GENDER:|}}Vous avez complété toutes les suggestions d’images d’aujourd'hui.\n\nAjustez {{GENDER:|}}vos niveaux de difficulté pour voir d’autres types de modification ou revenez demain pour plus de suggestions d’image.",
 	"growthexperiments-addimage-daily-task-limit-exceeded-dialog-button": "Compris !",
 	"growthexperiments-addimage-caption-warning-tooshort": "Les légendes doivent comporter au moins $1 caractère{{PLURAL:$1||s}}.",
@@ -619,7 +631,7 @@
 	"growthexperiments-homepage-mentorship-optout-confirmation-done": "Terminé",
 	"growthexperiments-homepage-mentorship-about-header": "À propos des tuteurs",
 	"growthexperiments-homepage-mentorship-about-subheader-mentor": "Qui est {{GENDER:|}}votre tut{{GENDER:$1|eur|rice}} ?",
-	"growthexperiments-homepage-mentorship-about-mentor-par1": "{{GENDER:|}}Votre tut{{GENDER:$1|eur|rice}} est une autre personne ayant beaucoup d’expérience de la modification sur {{SITENAME}}. {{GENDER:$1|Il|Elle}} a demandé à servir bénévolement pour guider les nouveaux arrivants comme vous sur la façon de rédiger et modifier et peut répondre aux questions que {{GENDER:|}}vous pourriez avoir concernant l’utilisation du site.",
+	"growthexperiments-homepage-mentorship-about-mentor-par1": "{{GENDER:|}}Votre tut{{GENDER:$1|eur|rice}} est une autre personne ayant beaucoup d’expérience de la modification sur {{SITENAME}}. {{GENDER:$1|Il|Elle}} a demandé à servir bénévolement pour guider les novices comme vous sur la façon de rédiger et modifier et peut répondre aux questions que {{GENDER:|}}vous pourriez avoir concernant l’utilisation du site.",
 	"growthexperiments-homepage-mentorship-about-mentor-par2": "Lorsque {{GENDER:|}}vous envoyez un message à votre tut{{GENDER:$1|eur|rice}}, {{GENDER:$1|il|elle}} le verra sur sa page de discussion d’utilisateur et vous{{GENDER:|}} recevrez une notification quand {{GENDER:$1|il|elle}} répondra.",
 	"growthexperiments-homepage-mentorship-about-subheader-optout": "Se désister du tutorat",
 	"growthexperiments-homepage-mentorship-about-optout-par1": "Sélectionnez le bouton ci-dessous pour {{GENDER:|}}vous désister si {{GENDER:|}}vous préférez dès maintenant ne plus avoir de tuteur ou tutrice spécifique qui {{GENDER:|}}vous soit affecté(e). {{GENDER:|}}Vous pourrez obtenir un nouveau tuteur ou une nouvelle tutrice à tout moment si {{GENDER:|}}vous changez d’avis.",
@@ -637,5 +649,5 @@
 	"growthexperiments-levelingup-keepgoing-notification-header": "{{GENDER:$2|}}Vous avez effectué $3 modification{{PLURAL:$3||s}} suggérée{{PLURAL:$3||s}}. Continuez à apprendre de nouvelles compétences.",
 	"growthexperiments-levelingup-keepgoing-notification-call-to-action-label": "Effectuer une modification suggérée",
 	"echo-category-title-ge-newcomer": "Fonctionnalités de croissance",
-	"echo-pref-tooltip-ge-newcomer": "Me notifier au sujet des tâches pour nouveaux arrivants et des autres fonctionnalités conçues pour assister les nouveaux utilisateurs."
+	"echo-pref-tooltip-ge-newcomer": "Me notifier au sujet des tâches pour novices et des autres fonctionnalités conçues pour assister les nouveaux utilisateurs."
 }
