--- a/i18n/homepage/ia.json
+++ b/i18n/homepage/ia.json
@@ -140,6 +140,8 @@
 	"tag-newcomer_task_add_link-description": "Modification \"Adder ligamine\" suggerite per le modulo de modificationes suggerite del pagina de initio pro novicios",
 	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Suggerite: adder imagines]]",
 	"tag-newcomer_task_image_suggestion-description": "Modification \"Adder imagines\" suggerite per le modulo de modificationes suggerite del pagina de initio pro novicios",
+	"tag-newcomer_task_section_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-section-image|Suggerite: adder imagines a sectiones]]",
+	"tag-newcomer_task_section_image_suggestion-description": "Modification \"Adder imagines a sectiones\" suggerite per le modulo de modificationes suggerite del pagina de initio pro novicios",
 	"growthexperiments-homepage-help-dialog-title": "Poner question al servicio de adjuta",
 	"growthexperiments-homepage-help-header": "Obtener adjuta pro modificar",
 	"growthexperiments-homepage-help-subheader": "Paginas principal de adjuta sur le modification",
@@ -254,7 +256,7 @@
 	"growthexperiments-homepage-suggestededits-difficulty-filters-title": "Selige typos de modificationes",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-intro": "Le modificationes suggerite es concipite pro adjutar te a apprender a modificar e devenir plus habile durante que tu labora a typos de modificationes plus grande.",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-create-title": "Vole crear un nove articulo?",
-	"growthexperiments-homepage-suggestededits-difficulty-filters-create-body": "Le redactores de {{SITENAME}} recommenda que tu essaya primo qualque cargas medie e difficile ante de tentar un nove articulo. [$1 Lege plus] sur como scriber un nove articulo mancante.",
+	"growthexperiments-homepage-suggestededits-difficulty-filters-create-body": "Le redactores de {{SITENAME}} recommenda que tu essaya primo qualque cargas medie e difficile ante de tentar un nove articulo. [$1 Lege plus] sur como scriber un nove articulo.",
 	"growthexperiments-homepage-suggestededits-topic-filters-title": "Selige topicos",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-close": "Facite",
 	"growthexperiments-homepage-suggestededits-topic-filters-close": "Facite",
@@ -354,6 +356,8 @@
 	"logentry-growthexperiments-addlink": "$1 {{GENDER:$2|revideva}} $4 suggestion{{PLURAL:$4||es}} de ligamine pro $3: $5 acceptate, $6 rejectate e $7 saltate",
 	"logentry-growthexperiments-addimage-accepted": "$1 {{GENDER:$2|ha revidite}} un suggestion de imagine pro $3: acceptate",
 	"logentry-growthexperiments-addimage-rejected": "$1 {{GENDER:$2|ha revidite}} un suggestion de imagine pro $3: rejectate",
+	"logentry-growthexperiments-addsectionimage-accepted": "$1 {{GENDER:$2|ha revidite}} un suggestion de imagine pro $3 (section $4): acceptate",
+	"logentry-growthexperiments-addsectionimage-rejected": "$1 {{GENDER:$2|ha revidite}} un suggestion de imagine pro $3 (section $4): rejectate",
 	"log-action-filter-growthexperiments": "Typo de evento GrowthExperiments:",
 	"log-action-filter-growthexperiments-claimmentee": "Cambiamentos de apprentisse",
 	"log-action-filter-growthexperiments-setmentor": "Cambiamentos de mentor",
@@ -464,6 +468,8 @@
 	"growthexperiments-addimage-inspector-help-button": "Obtener adjuta pro modificar",
 	"growthexperiments-addimage-inspector-details-button": "Vider detalios del imagine",
 	"growthexperiments-addimage-inspector-description-placeholder": "Nulle description disponibile",
+	"growthexperiments-addsectionimage-inspector-title": "Adder un imagine a un section de articulo",
+	"growthexperiments-addsectionimage-inspector-cta": "Adder iste imagine al section \"$1\" del articulo?",
 	"growthexperiments-addimage-detailsdialog-header": "Detalios del imagine",
 	"growthexperiments-addimage-detailsdialog-image": "Nomine del file:",
 	"growthexperiments-addimage-detailsdialog-description": "Description:",
@@ -484,6 +490,7 @@
 	"growthexperiments-addimage-rejectiondialog-reason-lowquality": "Imagine es de basse qualitate",
 	"growthexperiments-addimage-rejectiondialog-reason-unfamiliar": "Io non cognosce iste subjecto",
 	"growthexperiments-addimage-rejectiondialog-reason-foreignlanguage": "Io non pote leger le lingua del detalios del imagine",
+	"growthexperiments-addimage-rejectiondialog-reason-sectionnotappropriate": "Section non debe haber un imagine",
 	"growthexperiments-addimage-rejectiondialog-reason-other": "Altere",
 	"growthexperiments-addimage-viewer-close-button": "Clauder",
 	"growthexperiments-addimage-onboarding-content-intro-title": "Imagines adjuta le gente a apprender, ma multe articulos non ha un imagine.",
@@ -542,8 +549,15 @@
 	"growthexperiments-addimage-reason-wikipedia-languages": "Usate in le mesme articulo in $1 altere lingua{{PLURAL:$1||s}}: $2.",
 	"growthexperiments-addimage-reason-wikipedia-languages-others": "$1 altere{{PLURAL:$1||s}}",
 	"growthexperiments-addimage-reason-wikipedia-project": "Usate in le mesme articulo in $1.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment": "Usate in un section de articulo equivalente in $1 altere lingua{{PLURAL:$1||s}}.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment-languages": "Usate in un section de articulo equivalente in $1 altere lingua{{PLURAL:$1||s}}: $2.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment-project": "Usate in un section de articulo equivalente in $1.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-single": "Usate in un section de articulo equivalente in $1, e concerne un elemento Wikidata que pote esser relevante pro iste section de articulo.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-multiple": "Usate in un section de articulo equivalente in $1 e $2 altere lingua{{PLURAL:$2||s}}, e concerne un elemento Wikidata que pote esser relevante pro iste section de articulo.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-languages": "Usate in un section de articulo equivalente in $1 altere lingua{{PLURAL:$1||s}}, e concerne un elemento Wikidata que pote esser relevante pro iste section de articulo.",
 	"growthexperiments-addimage-reason-wikidata": "Trovate in le elemento Wikidata pro iste articulo (correspondentia forte).",
 	"growthexperiments-addimage-reason-commons": "Un de plure imagines ligate al elemento Wikidata pro iste articulo.",
+	"growthexperiments-addimage-reason-wikidata-section-topics": "Ligate a un elemento Wikidata que pote esser relevante pro iste section de articulo.",
 	"growthexperiments-addimage-daily-task-limit-exceeded": "Tu ha completate tote le suggestiones de imagines pro hodie.\n\nAdjusta tu nivello de difficultate pro vider altere typos de modificationes o reveni deman pro plus suggestiones de imagines.",
 	"growthexperiments-addimage-daily-task-limit-exceeded-dialog-button": "Comprendite",
 	"growthexperiments-addimage-caption-warning-tooshort": "Legendas debe esser de $1 character{{PLURAL:$1||es}} o plus.",
@@ -557,6 +571,7 @@
 	"growthexperiments-addsectionimage-caption-info-dialog-guidelines-neutral": "Resta neutral evitante judicamentos como \"bon\", \"fede\" o \"belle\".",
 	"growthexperiments-addsectionimage-caption-info-dialog-guidelines-language": "Scribe in le lingua de iste articulo: $1.",
 	"growthexperiments-addsectionimage-caption-info-dialog-guidelines-language-generic": "Scribe in le lingua del Wikipedia in que tu te trova.",
+	"growthexperiments-addsectionimage-summary-summary": "Function de suggestion de imagines: $1 imagine{{PLURAL:$1||s}} addite.",
 	"growthexperiments-addsectionimage-daily-task-limit-exceeded": "Tu ha completate tote le suggestiones de imagines al nivello de section pro hodie.\n\nAdjusta tu nivello de difficultate pro vider altere typos de modificationes o reveni deman pro plus suggestiones de imagines.",
 	"growthexperiments-addsectionimage-daily-task-limit-exceeded-dialog-button": "Comprendite",
 	"growthexperiments-homepage-mentorship-optin-header": "Mentor pro le modification",
