--- a/i18n/homepage/tr.json
+++ b/i18n/homepage/tr.json
@@ -161,6 +161,8 @@
 	"tag-newcomer_task_add_link-description": "Yeni gelen ana sayfasının önerilen düzenlemeler modülü tarafından önerilen \"Bağlantı ekle\" görev düzenlemesi",
 	"tag-newcomer_task_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-image|Yeni gelen görevi: görsel ekleme]]",
 	"tag-newcomer_task_image_suggestion-description": "Yeni gelen ana sayfasının önerilen düzenlemeler modülü tarafından önerilen \"Görsel ekleme\" görev düzenlemesi",
+	"tag-newcomer_task_section_image_suggestion": "[[mw:Special:MyLanguage/Help:Growth/Tools/Newcomer_Tasks#s-section-image|Önerildi: bölümlere görsel ekle]]",
+	"tag-newcomer_task_section_image_suggestion-description": "Yeni gelen ana sayfasının önerilen düzenlemeler modülü tarafından önerilen \"Bölüme görsel ekleme\" görev düzenlemesi",
 	"growthexperiments-homepage-help-dialog-title": "Danışma masasına sorun",
 	"growthexperiments-homepage-help-header": "Düzenleme ile ilgili yardım alın",
 	"growthexperiments-homepage-help-subheader": "Düzenleme ile ilgili en yararlı yardım sayfaları",
@@ -280,7 +282,7 @@
 	"growthexperiments-homepage-suggestededits-difficulty-filters-title": "Düzenleme türlerini seçin",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-intro": "Önerilen düzenlemeler, düzenleme yapmayı öğrenmenize ve daha büyük düzenleme türleri üzerinde çalışırken daha becerikli {{GENDER:|olmanıza}} yardımcı olmak için tasarlanmıştır.",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-create-title": "Yeni bir madde oluşturmak ister misiniz?",
-	"growthexperiments-homepage-suggestededits-difficulty-filters-create-body": "{{SITENAME}} düzenleyicileri, yeni bir madde yazmadan önce birkaç orta ve zor görevi {{GENDER:|denemenizi}} öneriyor. Eksik yeni bir madde yazma hakkında [$1 daha fazla bilgi edinin].",
+	"growthexperiments-homepage-suggestededits-difficulty-filters-create-body": "{{SITENAME}} düzenleyicileri, yeni bir madde yazmadan önce birkaç orta ve zor görevi {{GENDER:|denemenizi}} öneriyor. Yeni bir madde yazma hakkında [$1 daha fazla bilgi edinin].",
 	"growthexperiments-homepage-suggestededits-topic-filters-title": "Konuları seçin",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-close": "Yapıldı",
 	"growthexperiments-homepage-suggestededits-topic-filters-close": "Yapıldı",
@@ -493,6 +495,8 @@
 	"growthexperiments-addimage-inspector-help-button": "Düznleme ile ilgili yardım alın",
 	"growthexperiments-addimage-inspector-details-button": "Resim ayrıntılarını görüntüle",
 	"growthexperiments-addimage-inspector-description-placeholder": "Açıklama yok",
+	"growthexperiments-addsectionimage-inspector-title": "Maddenin bir bölümüne görsel ekle",
+	"growthexperiments-addsectionimage-inspector-cta": "Maddenin \"$1\" bölümüne bu görsel eklensin mi?",
 	"growthexperiments-addimage-detailsdialog-header": "Görsel ayrıntıları",
 	"growthexperiments-addimage-detailsdialog-image": "Dosya adı:",
 	"growthexperiments-addimage-detailsdialog-description": "Açıklama:",
@@ -513,6 +517,7 @@
 	"growthexperiments-addimage-rejectiondialog-reason-lowquality": "Düşük kaliteli görsel",
 	"growthexperiments-addimage-rejectiondialog-reason-unfamiliar": "Bu konuyu bilmiyorum",
 	"growthexperiments-addimage-rejectiondialog-reason-foreignlanguage": "Görsel ayrıntılarındaki dili okuyamıyorum",
+	"growthexperiments-addimage-rejectiondialog-reason-sectionnotappropriate": "Bölümde görsel olmamalıdır",
 	"growthexperiments-addimage-rejectiondialog-reason-other": "Diğer",
 	"growthexperiments-addimage-viewer-close-button": "Kapat",
 	"growthexperiments-addimage-onboarding-content-intro-title": "Görseller insanların öğrenmesine yardımcı olur, ancak çoğu maddede bir görsel yoktur.",
@@ -571,8 +576,15 @@
 	"growthexperiments-addimage-reason-wikipedia-languages": "Aynı maddenin $1 farklı {{PLURAL:$1|dilindeki}} maddede kullanılıyor: $2.",
 	"growthexperiments-addimage-reason-wikipedia-languages-others": "$1 {{PLURAL:$1|diğer}}",
 	"growthexperiments-addimage-reason-wikipedia-project": "$1 projesinde aynı maddede kullanıldı.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment": "Başka {{PLURAL:$1|bir dildeki|$1 dildeki}} eşdeğer bir madde bölümünde kullanılıyor.",
+	"growthexperiments-addimage-reason-wikidata-section-alignment-languages": "Başka {{PLURAL:$1|bir dildeki|$1 dildeki}} eşdeğer bir madde bölümünde kullanılıyor: $2",
+	"growthexperiments-addimage-reason-wikidata-section-alignment-project": "$1 dilindeki eşdeğer bir madde bölümünde kullanılıyor.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-single": "$1 dilindeki eşdeğer bir madde bölümünde kullanılıyor ve bu madde bölümüyle ilgili bir Vikiveri ögesiyle ilişkili.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-multiple": "$1 ve {{PLURAL:$2|bir dilde daha|$2 dilde daha}} eşdeğer bir madde bölümünde kullanılıyor ve bu madde bölümüyle ilgili bir Vikiveri ögesiyle ilişkili.",
+	"growthexperiments-addimage-reason-wikidata-section-intersection-languages": "{{PLURAL:$1|Bir dilde daha|$1 dilde daha}} eşdeğer bir madde bölümünde kullanılıyor ve bu madde bölümüyle ilgili bir Vikiveri ögesiyle ilişkili.",
 	"growthexperiments-addimage-reason-wikidata": "Vikiveri ögesinde bulundu (güçlü eşleşme).",
 	"growthexperiments-addimage-reason-commons": "Bu maddenin Vikiveri ögesine bağlı birkaç görselden biri.",
+	"growthexperiments-addimage-reason-wikidata-section-topics": "Bu madde bölümüyle ilgili bir Vikiveri ögesiyle bağlantılı.",
 	"growthexperiments-addimage-daily-task-limit-exceeded": "Bugünün tüm görsel önerilerini {{GENDER:|tamamladınız}}.\n\nDiğer değişiklik önerilerini görmek için zorluk seviyenizi ayarlayın veya daha fazla görsel önerisi için yarın tekrar uğrayın.",
 	"growthexperiments-addimage-daily-task-limit-exceeded-dialog-button": "Anladım",
 	"growthexperiments-addimage-caption-warning-tooshort": "Altyazı $1 {{PLURAL:$1|karakter}} veya daha uzun olmalı.",
