--- a/i18n/mentorship/skr-arab.json
+++ b/i18n/mentorship/skr-arab.json
@@ -4,7 +4,26 @@
 			"Saraiki"
 		]
 	},
+	"growthexperiments-mentor-dashboard-mentee-overview-info-legend-headline": "مہاندرا",
+	"growthexperiments-mentor-dashboard-mentee-overview-info-legend-userinfo": "ورتݨ ناں",
+	"growthexperiments-mentor-dashboard-mentee-overview-add-filter": "چھاݨے",
+	"growthexperiments-mentor-dashboard-mentee-overview-add-filter-submit": "اپ ݙیٹ",
+	"growthexperiments-mentor-dashboard-mentee-overview-add-filter-total-edits-headline": "تبدیلیاں دی گنتی",
+	"growthexperiments-mentor-dashboard-mentee-overview-add-filter-total-edits-from": "گھٹ کنوں گھٹ",
+	"growthexperiments-mentor-dashboard-mentee-overview-add-filter-total-edits-to": "ودھ کنوں ودھ",
+	"growthexperiments-mentor-dashboard-mentee-overview-add-filter-active-days-ago-days": "موجودہ ݙینہ",
+	"growthexperiments-mentor-dashboard-mentee-overview-add-filter-active-days-ago-months": "موجودہ مہینے",
+	"growthexperiments-mentor-dashboard-mentee-overview-search-placeholder": "ڳولو",
 	"growthexperiments-mentor-dashboard-mentee-overview-talk": "ڳالھ مہاڑ",
+	"growthexperiments-mentor-dashboard-mentor-tools-headline": "ترتیباں",
+	"growthexperiments-mentor-dashboard-mentor-tools-mentor-status-active": "متحرک",
+	"growthexperiments-mentor-dashboard-mentor-tools-mentor-status-away": "دور",
+	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-cancel": "منسوخ",
+	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-submit": "اجھکو",
+	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-away-for-label": "ݙیہاڑے",
+	"growthexperiments-quit-mentorship-reason": "سبب",
+	"growthexperiments-mentor-dashboard-mentor-tools-message-change-dialog-save": "بچاؤ",
+	"growthexperiments-mentor-dashboard-mentor-tools-message-change-dialog-cancel": "منسوخ",
 	"growthexperiments-mentor-dashboard-personalized-praise-title": "شاباش بھیڄو",
 	"growthexperiments-mentor-dashboard-personalized-praise-page-previous-icon-label": "پچھلا ورقہ",
 	"growthexperiments-mentor-dashboard-personalized-praise-page-next-icon-label": "اڳلا ورقہ",
@@ -26,8 +45,11 @@
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-save": "بچاؤ",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-cancel": "منسوخ",
 	"growthexperiments-manage-mentors-none": "کوئی وی کائنی",
+	"growthexperiments-manage-mentors-username": "ورتݨ ناں",
 	"growthexperiments-manage-mentors-weight": "وزن",
+	"growthexperiments-manage-mentors-status": "حیثیت",
 	"growthexperiments-manage-mentors-edit": "لکھو",
 	"growthexperiments-manage-mentors-edit-weight": "وزن",
-	"growthexperiments-manage-mentors-edit-reason": "سبب"
+	"growthexperiments-manage-mentors-edit-reason": "سبب",
+	"growthexperiments-manage-mentors-remove-mentor": "ہٹاؤ"
 }
